--- a/中医/增订伪药条辨/伪药条辨.md
+++ b/中医/增订伪药条辨/伪药条辨.md
@@ -33,7 +33,7 @@
 # 北沙参
 伪名**洋沙参**，色带黄，味辣不甜。又有**南沙参**，皮极粗，条大味辣，性味与北产相反。按此沙参，色白条小而结实，气味苦中带甘，故《本经》云：微寒。又云：补中益肺气。于以上所述二种之伪品，味既辛辣，又安能补益乎？
 
-`炳章`按：北沙参，`山东``日照县`、`故墩县`、`莱阳县`、`海南县`俱出。`海南`出者，条细质坚，皮光洁色白，鲜活润泽为最佳。莱阳出者，质略松，皮略糙，白黄色，亦佳。日照、故墩出者，条粗质松，皮糙，黄色者次。`关东`出者，粗松质硬，皮糙，呆黄色，更次。其他`台湾`、`福建`、`湖`、`广`出者，粗大松糙，为最次，不入药用。惟无外国产。所云**南沙参**为块根，亦能补肺。`郑`君云：有辣味，或别有一种耳。
+`炳章`按：北沙参，`山东``日照县`、`故墩县`、`莱阳县`、`海南县`俱出。`海南`出者，条细质坚，皮光洁色白，鲜活润泽为最佳。`莱阳`出者，质略松，皮略糙，白黄色，亦佳。`日照`、`故墩`出者，条粗质松，皮糙，黄色者次。`关东`出者，粗松质硬，皮糙，呆黄色，更次。其他`台湾`、`福建`、`湖`、`广`出者，粗大松糙，为最次，不入药用。惟无外国产。所云**南沙参**为块根，亦能补肺。`郑`君云：有辣味，或别有一种耳。
 
 # 党参
 党参种类不一，《纲目拾遗》引翁有良《辨误》云：党参功用可代人参，皮色黄而横纹有类乎防风，故名**防党**。`江`南徽州等处呼为狮头参，因芦头大而圆凸也。古名`上党`人参，产于`山西``太行山`、`潞安州`等处为胜。《百草镜》有云：亦有白色者，总以净软壮实、味甜者佳。嫩而小枝，名**上党参**；老而大者，名**防党参**。味甘平，补中益气，和脾胃，除烦恼，解渴。中气微虚，用以调补，甚为平安。今有川党，盖`陕西`毗连移种栽植，皮白味淡，有类桔梗，无狮头，较`山西`者迥别，入药亦殊劣，不可用。近肆中一种黄色党参，有用栀子熬汁染造者，服之涌吐。更有一种小**潞党参**，皮色红者，乃矾红所染，味涩不甘，皆赝物也，用者宜明辨之。
@@ -78,7 +78,7 @@
 # 黄连
 伪名**广连**，即洋川连，色不黄，中有花点，皮黑，面有毛。按黄连以`四川`雅州出者为佳，故名**雅连**，形如鸡距，故又名鸡爪连。气味苦寒，色极黄，易于辨识。近有办`峨嵋山`所产者，价值甚昂，漳、泉人最喜购之。若此种广连，色不黄则名不称，性味既殊，功用自劣，误服之则贻害多矣。
 
-`炳章`按：黄连背阴草根也，苗似茶丛，经冬不调。生于深山穷谷，幽僻无日照之处，必得凝寒之气者为上。八九月出新，种类甚多，随地皆产，且有野生、种植之别，惟`四川`野生者多佳品，为治疗上之要药。兹将其产别种类之形态详别于下：`四川``峨嵋山`产者，曰**峨嵋连**，芦软而绿，刺硬皮黄，切开空心，有菊花纹金黄色者，为最上品。`撞州`野出者，曰**撞州连**，芦头中空而圆，有硬刺，色黄带青，头尾均匀，切开亦有菊花纹，亦佳。马湖所出者，与`峨嵋山`连相似，亦软芦硬刺，皮色青带黑，首尾一样，有节，均为佳品。`紫宕沟`、`瓦屋山`二山出者，瘦小有蜂腰，皮毛柔，软芦硬刺，亦佳。以上皆为**川水连**，亦有新老山之别。如新山则条短刺硬，皮黑色，软芦多绿嫩者佳；老山则细长，芦软刺少而硬，色黄老者，为最佳。此皆野山出品。`打箭炉`出者，亦曰**水连**，皮黑刺少，无芦头，有杈枝，色黄，略次。重庆种出者，曰**母珠连**，硬芦而扁，头粗尾细，色黄，更次。`峒山`种出者，曰**峒连**，芦扁硬，刺略软，色黄，切开空松者，亦次。`四川`石柱厅种出者，曰**味连**，形似鸡爪连，亦次。`嘉定`管高庙所出者，曰**嘉定连**，俗名**母连**，种后五年出土，皮如鳞甲，肉色黄而带红，亦次。雅州产者，曰**雅连**，`冈山`产者，曰**冈连**，皆次。`南川``金佛山`产者，曰**金山连**，芦长连少，亦次。以上皆`四川`产也。`云南`野出者，曰**云景连**，体松芦软，形似鸡脚爪，无芦，刺少，皮黑，肉色黄，亦次；种者芦硬刺软，更次。`广西`产者，曰**新山连**，皮光色黄，质重，断则淡黄色，亦甚次。处州出者，曰**土连**，皮黑肉实心，淡黄色者，味虽苦回味兼甜，亦极次。奇会工出者，曰**会连**，形似母连，皮略黑，肉空松，乃马所食，不入药用。鸡屎连，色黑细小，断则绿色而淡，亦极次，不入药。近有`日本`产者，曰**洋连**，形色略同，皮光而有毛刺，肉色淡黄微白，更次，亦不堪入药。自云连至洋连终，俱属侧路伪品，服之甚为害人，医者与病家，皆宜注意之。
+`炳章`按：黄连背阴草根也，苗似茶丛，经冬不调。生于深山穷谷，幽僻无日照之处，必得凝寒之气者为上。八九月出新，种类甚多，随地皆产，且有野生、种植之别，惟`四川`野生者多佳品，为治疗上之要药。兹将其产别种类之形态详别于下：`四川``峨嵋山`产者，曰**峨嵋连**，芦软而绿，刺硬皮黄，切开空心，有菊花纹金黄色者，为最上品。`撞州`野出者，曰**撞州连**，芦头中空而圆，有硬刺，色黄带青，头尾均匀，切开亦有菊花纹，亦佳。马湖所出者，与`峨嵋山`连相似，亦软芦硬刺，皮色青带黑，首尾一样，有节，均为佳品。`紫宕沟`、`瓦屋山`二山出者，瘦小有蜂腰，皮毛柔，软芦硬刺，亦佳。以上皆为**川水连**，亦有新老山之别。如新山则条短刺硬，皮黑色，软芦多绿嫩者佳；老山则细长，芦软刺少而硬，色黄老者，为最佳。此皆野山出品。`打箭炉`出者，亦曰**水连**，皮黑刺少，无芦头，有杈枝，色黄，略次。`重庆`种出者，曰**母珠连**，硬芦而扁，头粗尾细，色黄，更次。`峒山`种出者，曰**峒连**，芦扁硬，刺略软，色黄，切开空松者，亦次。`四川`石柱厅种出者，曰**味连**，形似鸡爪连，亦次。`嘉定`管高庙所出者，曰**嘉定连**，俗名**母连**，种后五年出土，皮如鳞甲，肉色黄而带红，亦次。雅州产者，曰**雅连**，`冈山`产者，曰**冈连**，皆次。`南川``金佛山`产者，曰**金山连**，芦长连少，亦次。以上皆`四川`产也。`云南`野出者，曰**云景连**，体松芦软，形似鸡脚爪，无芦，刺少，皮黑，肉色黄，亦次；种者芦硬刺软，更次。`广西`产者，曰**新山连**，皮光色黄，质重，断则淡黄色，亦甚次。处州出者，曰**土连**，皮黑肉实心，淡黄色者，味虽苦回味兼甜，亦极次。奇会工出者，曰**会连**，形似母连，皮略黑，肉空松，乃马所食，不入药用。鸡屎连，色黑细小，断则绿色而淡，亦极次，不入药。近有`日本`产者，曰**洋连**，形色略同，皮光而有毛刺，肉色淡黄微白，更次，亦不堪入药。自云连至洋连终，俱属侧路伪品，服之甚为害人，医者与病家，皆宜注意之。
 
 # 川贝母、川贝
 伪名**鲁贝**，粒扁，洗后皮脱，其粉即出。按贝母惟`川``蜀`出者为佳。其子在根下，内心外瓣，其色带白，如聚贝子，故名**贝母**。盖色白、味辛，生于`西川`，故属肺金之药。`浙`贝尚不可混用，况`鲁`贝乎。更有一种名**西珠贝母**，系山慈姑伪充。又有一种伪货，名**西贝**，其性不能润肺化痰，更相反也。
@@ -136,7 +136,7 @@
 `炳章`按：蒙花，三月出新。`湖北`当归山出者，其花白绿色，白茸毛，净而无梗者，佳。各处出，花碎小，色白黄，梗多者，次。
 
 # 仙鹤草
-（`徐友丞`来稿）承赐《仙鹤草非龙芽草辨》，拜读之下，无任感佩，刊登布告，医病两家实受教益。盖`中国`素有天产之灵草，得以发扬。彼自命维新学家，学习西医皮毛，唾弃中华医药者，可恍然悟矣。`友丞`按`光绪`丙申年间，有畿东`丰润``张雨人`言，刊传仙鹤草图说云：仙鹤草三叶之下，有耳叶者真，无耳叶者非，亦是一考据也。近据会员`梅子刚`君来函云：据友人肺痨专家`陈`君言，此草屡治血症，甚有效验，并谓不宜红枣同食，以红枣性燥云。`梅`君又云：用以治瘰疬，甚有效验。
+（`徐友丞`来稿）承赐《仙鹤草非龙芽草辨》，拜读之下，无任感佩，刊登布告，医病两家实受教益。盖`中国`素有天产之灵草，得以发扬。彼自命维新学家，学习西医皮毛，唾弃`中华`医药者，可恍然悟矣。`友丞`按`光绪`丙申年间，有畿东`丰润``张雨人`言，刊传仙鹤草图说云：仙鹤草三叶之下，有耳叶者真，无耳叶者非，亦是一考据也。近据会员`梅子刚`君来函云：据友人肺痨专家`陈`君言，此草屡治血症，甚有效验，并谓不宜红枣同食，以红枣性燥云。`梅`君又云：用以治瘰疬，甚有效验。
 
 `炳章`按：`毛退之`《中西医话》云：**龙芽草**，多年生草，山野自生，高二三尺，叶为羽状复叶。夏月出花轴，花黄五瓣，实多刺，俗称仙鹤草。治吐血颇效。《百草镜》云：龙芽草生山土，立夏时展苗布地，叶有微毛，起茎高一二尺，寒露时开花成穗，色黄而细小，根有白芽，尖圆似龙芽，顶开黄花，故名**金顶龙芽**。一名**铁胡蜂**，以其老根黑色形似之。《救荒本草》云：龙芽草一名**瓜香草**，生辉县鸭子口山野间，苗高尺余，茎多涩毛，叶如地棠叶而宽大，叶头齐团，每五叶或七叶作一茎排生，叶茎脚上，又有小芽叶两两对生，梢间出穗，开小圆五瓣黄花，结实毛蓇突，有子大如黍粒，味甜。《植物名实图考》云：此草建昌呼为老鹳嘴，`广信`呼为子母草，`湖南`呼为毛脚茵。以治风痰、腰痛。《滇南本草》谓之黄龙尾，味苦，性温，治妇人月经前后红崩、白带，面寒，腹痛，赤白痢疾。考诸家学说，并採鲜草察视，再使园中种植，将其生长目睹形状辨之，确是仙鹤草无疑。兹将目睹形态，再辨于下：
 
@@ -145,7 +145,7 @@
 # 藿香
 伪名**次藿香**，气味不香，不知何处所产。更有一种洋藿香，性味更别，叶梗皆然，用之无益而有害。按藿香产于`岭`南`交趾`为正地道，故近日由`广东`办来者为良，气味芬香，功能醒脾和胃，宣气开郁，最得天地之正气。且方茎有节，中虚，叶似桑而小薄，用者当明辨之。
 
-`炳章`按：藿香，本草名「兜娄婆香」，产`岭`南为最道地。在羊城百里内之`河南`宝冈村及肇庆者，五六月出新，方梗，白毫绿叶，揉之清香气绕鼻而浓厚。味辛淡者，名**广藿香**，`广东`省垣各山货行，收买拣净发行，首推巨昌与泰昌为最道地。如`雷州`、琼州等处产者，名**海南藿香**，即今所谓**洋藿香**也，其气薄而浊，味辛辣燥烈，叶细而小，梗带圆形，茎长，根重为最次。其他如`江``浙`所产之土藿香，能趁鲜切片，烈日晒乾，贮于缸甏，使香气收贮不走，入药效能亦甚强，不亚于广藿香也。
+`炳章`按：藿香，本草名「兜娄婆香」，产`岭`南为最道地。在羊城百里内之`河南``宝冈村`及`肇庆`者，五六月出新，方梗，白毫绿叶，揉之清香气绕鼻而浓厚。味辛淡者，名**广藿香**，`广东`省垣各山货行，收买拣净发行，首推巨昌与泰昌为最道地。如`雷州`、`琼州`等处产者，名**海南藿香**，即今所谓**洋藿香**也，其气薄而浊，味辛辣燥烈，叶细而小，梗带圆形，茎长，根重为最次。其他如`江``浙`所产之土藿香，能趁鲜切片，烈日晒乾，贮于缸甏，使香气收贮不走，入药效能亦甚强，不亚于广藿香也。
 
 # 土薄荷、薄荷
 土薄荷，色淡无香味，不若`苏州`所莳者佳，茎小，气芳，方堪入药。故陈士良《食性本草》谓之**吴菝𦽅**，可见薄荷以`吴`产者为上品。
@@ -173,15 +173,15 @@
 `炳章`按：细辛，六月出新。`关东`出者，为北细辛，根茎细，清白，气辛，叶少梗多为最佳。`江`南`宁国``泾县`出亦佳，`江宁`、`句容`、`滁州`、`白阳山`等处出，皆次。`亳州`出者为马细辛，`山东`出为东细辛，均次，不堪药用。
 
 # 黄菊、滁菊、白菊
-黄菊，即黄色之茶菊，较家菊朵小、心多而色紫。`杭州`钱塘所属各乡，多种菊为业。九十月取花，挑入城市以售。有高脚黄等名色，味苦微甘，性平而香，去风除热，明目疏肝，能清眩晕头风。其`浙`省城头一带所产名城头菊，皆野生城上石缝中，至秋开花，花小如茶菊，香气沁脾，点茶更佳。闻有以本地园中所种之陶爱，一名**满天星**伪充，形虽似而性不同，且少香味，又安能疗病乎？
+黄菊，即黄色之茶菊，较家菊朵小、心多而色紫。`杭州`钱塘所属各乡，多种菊为业。九十月取花，挑入城市以售。有高脚黄等名色，味苦微甘，性平而香，去风除热，明目疏肝，能清眩晕头风。其`浙`省城头一带所产名**城头菊**，皆野生城上石缝中，至秋开花，花小如茶菊，香气沁脾，点茶更佳。闻有以本地园中所种之陶爱，一名**满天星**伪充，形虽似而性不同，且少香味，又安能疗病乎？
 
-`炳章`按：菊花种类甚杂，惟黄菊产`杭州`、海宁等处，味苦兼甜，香气甚雅，有蒸、晒二种。蒸菊，将鲜菊入蒸笼内，先蒸瘪再晒，烘焙至燥，其色老黄，收藏朵瓣不散。晒菊，此鲜花烈日晒乾，其色嫩黄，朵松，花瓣易散，皆道地。城头菊，野生城墙阴处，色黄，朵较少，`浙`名野菊花，亦蒸晒为善。味苦性凉，香气亦佳，以散风清火，解毒消疮肿。凡生危险疔毒，用野菊捣汁一大碗饮之，可免毒气攻心。以燥花作枕，永免头风疮疖。其他如滁菊、白菊真赝关系，较黄菊犹重，为此再附辨之。
+`炳章`按：菊花种类甚杂，惟黄菊产`杭州`、`海宁`等处，味苦兼甜，香气甚雅，有蒸、晒二种。蒸菊，将鲜菊入蒸笼内，先蒸瘪再晒，烘焙至燥，其色老黄，收藏朵瓣不散。晒菊，此鲜花烈日晒乾，其色嫩黄，朵松，花瓣易散，皆道地。城头菊，野生城墙阴处，色黄，朵较少，`浙`名野菊花，亦蒸晒为善。味苦性凉，香气亦佳，以散风清火，解毒消疮肿。凡生危险疔毒，用野菊捣汁一大碗饮之，可免毒气攻心。以燥花作枕，永免头风疮疖。其他如滁菊、白菊真赝关系，较黄菊犹重，为此再附辨之。
 
 附：滁菊、白菊
 
 `炳章`按：白滁菊出`安徽``滁州`者，其採法先剪枝，连花带叶倒挂檐下，阴乾后再摘花，故气味更足。其花瓣细软千层，花蕊小，嫩黄色，花蒂绿，尖小而平。气芬芳，味先微苦后微甘。口含后，香气甚久不散为最佳。出`浙江``德清县`者，花瓣阔而糙，蕊心微黄，蒂大柄脐凹陷，气味香不浓，为略次。
 
-又按：白菊，`河南`出者为亳菊，蒂绿，千瓣细软，无心蕊，气清香，味苦微甘为最佳。`苏州`浒墅关出为杜菊，色白味甘，又出单瓣，亦佳。海宁出者，名**白荼菊**，色白瓣粗，心蕊黄，味甜，多茶叶店买，亦佳。`江西``南昌府`出，名**淮菊**，朵小色白带红，味苦，气浊，梗多，亦次。`厦门`出者曰**洋菊**，朵大而扁，心亦大，气浊味甘，更次。
+又按：白菊，`河南`出者为亳菊，蒂绿，千瓣细软，无心蕊，气清香，味苦微甘为最佳。`苏州``浒墅关`出为杜菊，色白味甘，又出单瓣，亦佳。`海宁`出者，名**白荼菊**，色白瓣粗，心蕊黄，味甜，多茶叶店买，亦佳。`江西``南昌府`出，名**淮菊**，朵小色白带红，味苦，气浊，梗多，亦次。`厦门`出者曰**洋菊**，朵大而扁，心亦大，气浊味甘，更次。
 
 # 金银花
 金银花，甘平。除热解毒，能和荣卫，疗风养血，除痢宽胀，匪特为疮科要药也。随地皆有，以`河南`所产为良。近有以黍花伪充，为祸最烈。黍花短小梗多，色黑不香为异，亦易辨已。
@@ -194,9 +194,9 @@
 `炳章`按：玫瑰花产`杭州``苋桥`者，花瓣紫红，花蒂青绿色，气芳香甚浓者佳。产`湖州`者，色紫淡黄红色，朵长，蒂绿黄色，且有小点，香味淡，略次。`萧山``龛山`产者，桃红色，味淡气香而浊，受潮极易变色，为最次。且玫瑰花具有特性，人尿屎浇者，立死。凡正月终抽红芽，剪新抽嫩条，每棵二三枝，种斜形，生根较易。次年其花盛开，根傍亦有嫩枝发出，隔二三年宜迁种换地。此花名离娘草，必须移东植西，方得起发。若同园有开红花之果木，如石榴、蔷薇等类，则满园玫瑰，忌不开花。速将夺色之花迁远，则玫瑰及时而开，亦其特性也。
 
 # 缩砂、春砂
-伪名**洋扣**，味辣不香，色亦带黄。更有一种广扣，仁大味苦，均非真品。按缩砂仁产`岭`南山泽间，近以阳春出者为佳，故一名**春砂**，状似豆蔻，皮紧厚而皱，色黄赤，外有细刺，气味甚香。胡得搀用洋扣、广扣，鱼目混珠，殊可恨也。
+伪名**洋扣**，味辣不香，色亦带黄。更有一种广扣，仁大味苦，均非真品。按缩砂仁产`岭`南山泽间，近以`阳春`出者为佳，故一名**春砂**，状似豆蔻，皮紧厚而皱，色黄赤，外有细刺，气味甚香。胡得搀用洋扣、广扣，鱼目混珠，殊可恨也。
 
-`炳章`按：缩砂即阳春砂，产`广东`肇庆府阳春县者，名**阳春砂**，三角长圆形，两头微尖，外皮刺灵红紫色，肉紫黑色，嚼之辛香微辣，为最道地。罗定产者，头平而圆，刺短，皮紫褐色，气味较薄，略次。`广西`出者，名**西砂**，颗圆皮薄，刺更浅，色赭黑色，香味皆淡薄，更次。`郑`君所说「味辣不香」，或是西砂，必非洋扣，西砂圆形，惟壳与蔻不同，似难混充耳。
+`炳章`按：缩砂即阳春砂，产`广东``肇庆府``阳春县`者，名**阳春砂**，三角长圆形，两头微尖，外皮刺灵红紫色，肉紫黑色，嚼之辛香微辣，为最道地。罗定产者，头平而圆，刺短，皮紫褐色，气味较薄，略次。`广西`出者，名**西砂**，颗圆皮薄，刺更浅，色赭黑色，香味皆淡薄，更次。`郑`君所说「味辣不香」，或是西砂，必非洋扣，西砂圆形，惟壳与蔻不同，似难混充耳。
 
 # 土蜜砂
 缩砂仁在山採下，用蜜生浸，所以杀其燥烈之气也。闻有以原壳砂水浸透，以蜜煮过，其性仍燥，用者慎之。
@@ -211,17 +211,17 @@
 # 川芎、芎藭
 伪名**洋川芎**，形虽似而味薄，则功用自劣。按芎藭以`四川`产者为胜，故名**川芎**。气味辛温，根叶皆香。若此种洋川芎，味薄不辛，安能治病。更有一种南芎，只可煎汤沐浴，皆不堪入药矣。
 
-`炳章`按：本草一名**芎藭**，`蜀`省产地首推`灌县`，有野生家种之分。其茎高二尺，叶如芹，分裂尤细。秋间开白花五瓣，为伞形，花序全体芬馥，其根即芎藭也。产地聚集`成都`，重庆者多，形大圆为抚芎。蓝由县出者，嫩小，曰**蓝芎**。`陕西`出扁小，为西芎，皆次。`浙江``温州`及`金华`出，曰**南芎**，更次。川芎各处虽出，因地命名，除`蜀`产者外，皆不道地。近年`蜀`省产额颇广，足敷全国所需求，所以除川芎外，他如蓝芎、西芎、南芎等，现出产较少，已在淘汰之列。近年`日本`虽亦有产，其形似是而非，气味尤恶劣，不堪入药，国人亦无购之者。
+`炳章`按：本草一名**芎藭**，`蜀`省产地首推`灌县`，有野生家种之分。其茎高二尺，叶如芹，分裂尤细。秋间开白花五瓣，为伞形，花序全体芬馥，其根即芎藭也。产地聚集`成都`，`重庆`者多，形大圆为抚芎。蓝由县出者，嫩小，曰**蓝芎**。`陕西`出扁小，为西芎，皆次。`浙江``温州`及`金华`出，曰**南芎**，更次。川芎各处虽出，因地命名，除`蜀`产者外，皆不道地。近年`蜀`省产额颇广，足敷全国所需求，所以除川芎外，他如蓝芎、西芎、南芎等，现出产较少，已在淘汰之列。近年`日本`虽亦有产，其形似是而非，气味尤恶劣，不堪入药，国人亦无购之者。
 
 # 郁金
 郁金，辛苦微甘，气寒，其性轻扬，上行入心及包络，兼入肺经。凉心热，散肝郁，破血下气。出`川`、`广`，体锐圆如蝉肚，皮黄肉赤，色鲜微香。折之光明脆彻，苦中带甘者乃真。今市中所售者多是[姜黄]，并有以[蓬莪术]伪之者，俱峻削性烈，挟虚者大忌，用者慎之。况郁金苦寒，色赤入心；姜黄辛温，色黄入脾；莪术味苦，色青入肝。胡得混售而贻害耶！
 
-`炳章`按：郁金，山草之根，野生也。两`广`、`江西`咸有之，而以`蜀`产者为胜。上古不甚重，用以治马病，故又名马术，因其形像莪术也。自唐以后，始入药料，治血证有功，本非贵重之品。`清`初`吴`乱未靖时，`蜀`道不通，货少居奇，致价数倍，甚则以姜黄辈伪之者。然其形锐圆，如蝉腹状，根杪有细须一缕，如菱脐之苗，长一二寸，市人因呼「金线吊虾蟆」、「蝉肚爵金」是也。其皮黄白，有皱纹，而心内黄赤。剉开俨然两层，如井栏，产`四川`重庆。惟本年生者嫩小而黄，若遗地未採，逾年而收，则老而深黯色，如三七状，为老广郁金。然老郁金治血证，化瘀削积之力胜于嫩者，若开郁散痛，即嫩黄者亦效。乃近年传黑者为野郁金，黄者为假，并误其为姜黄，殊不知此物本是野生。若姜黄皮有节纹，肉色深黄无晕，蓬术色黑无心，最易辨也。然老郁金虽产`四川`，近今名称广郁金。所谓**川郁金**，乃`温州`产也，色黯黑，形扁亦有心，惟不香耳。
+`炳章`按：郁金，山草之根，野生也。两`广`、`江西`咸有之，而以`蜀`产者为胜。上古不甚重，用以治马病，故又名马术，因其形像莪术也。自唐以后，始入药料，治血证有功，本非贵重之品。`清`初`吴`乱未靖时，`蜀`道不通，货少居奇，致价数倍，甚则以姜黄辈伪之者。然其形锐圆，如蝉腹状，根杪有细须一缕，如菱脐之苗，长一二寸，市人因呼「金线吊虾蟆」、「蝉肚爵金」是也。其皮黄白，有皱纹，而心内黄赤。剉开俨然两层，如井栏，产`四川``重庆`。惟本年生者嫩小而黄，若遗地未採，逾年而收，则老而深黯色，如三七状，为老广郁金。然老郁金治血证，化瘀削积之力胜于嫩者，若开郁散痛，即嫩黄者亦效。乃近年传黑者为野郁金，黄者为假，并误其为姜黄，殊不知此物本是野生。若姜黄皮有节纹，肉色深黄无晕，蓬术色黑无心，最易辨也。然老郁金虽产`四川`，近今名称**广郁金**。所谓**川郁金**，乃`温州`产也，色黯黑，形扁亦有心，惟不香耳。
 
 # 子姜黄
 子姜黄，气味辛苦而温，是经种三年以上老姜所生。色黄入脾，兼治气，匪特破血除风。闻有以黄北姜伪充，则贻害多矣。
 
-`炳章`按：子姜黄，`福建`邵武出者，色黄，皮黄黑色，有节皱纹者佳。`四川`产者，名**川黄**，略次。`江`南北地产者，色深黄，作颜料用之。`广西``柳州`产者，形似蝉肚，色深黄兼黑者，次，作香料用之。
+`炳章`按：子姜黄，`福建``邵武`出者，色黄，皮黄黑色，有节皱纹者佳。`四川`产者，名**川黄**，略次。`江`南北地产者，色深黄，作颜料用之。`广西``柳州`产者，形似蝉肚，色深黄兼黑者，次，作香料用之。
 
 # 片姜黄、姜黄、片子姜黄
 `李时珍`云：以扁如乾姜形者，为片子姜黄，治风痹臂痛有奇功。今肆中有伪品，即姜黄假充，粒大皮粗，味辣，内不结润，非片子也，勿用为是。
@@ -246,7 +246,7 @@
 # 紫菀
 伪名**次紫菀**，又名**硬芦紫菀**，服之往往愈见咳逆气结，其害无穷。按紫菀，近道处处虽有出产，然色紫味苦，质极柔宛，若此种硬芦，形质既殊，性味自劣。闻又有以车前及旋覆根，赤土染过混充者，更奚堪入药乎。
 
-`炳章`按：紫菀`凤阳府`、`亳州`龙王庙四乡出者，鬚根粗，软糯，色紫红，硬梗少者佳。`河南``淮庆府`出，枝略细，软糯，亦可用。`湖北`出者，性硬根细，泥屑重者次。伪者`浙江`尚少，因价贱，出货亦多故耳。
+`炳章`按：紫菀`凤阳府`、`亳州``龙王庙`四乡出者，鬚根粗，软糯，色紫红，硬梗少者佳。`河南``淮庆府`出，枝略细，软糯，亦可用。`湖北`出者，性硬根细，泥屑重者次。伪者`浙江`尚少，因价贱，出货亦多故耳。
 
 # 款冬、款冬花
 款冬花为治嗽要药，十一二月开花如黄菊，雪积冰坚之时，款花偏艳。想见其纯阳之品，故一名**款冻**。生`河北`关中，微见花未舒放者良。近今市肆多以枇杷花蕊伪充，虽无大害，然性不同，则功自异耳。
@@ -341,7 +341,7 @@
 # 苏戈夏、半夏
 苏制半夏，当以`宋公祠`所制为胜。因半夏性燥有毒，故用法制之，性较和平，去痰之功虽缓，然素体属火者，颇见相宜。近今伪药杂出，因苏夏盛行，`上海`各处均有仿制。制法不同，功力自逊，而肆中所售土苏夏者，系用半夏研末，调面粉米泔叠为圆粒，假充`上海`苏夏，以伪乱伪，殊堪痛恨。
 
-`炳章`按：`苏州`戈制半夏，不但各地仿制作伪，且现洋托民信局去购，亦多赝品。因该地信局，与伪半夏店订有私约，与信局以重大回扣，而寄来仿单，亦属相同，惟半夏色黯不香，无玉桂气。戈老二房真者，其色黄亮，气香有玉桂气。欲购真者，必须托邮局汇洋挂号，寄`苏州``阊门`临赖路戈老二房半夏店，则不致误购伪品耳。且戈半夏方虽秘制，大约与《本草纲目拾遗》内「宋公夏」相类，有肉桂，性温燥。`炳章`实验治寒湿痰上壅气喘，确效。凡治阴虚热痰气喘，苟误服之，必因燥热而咳血自汗，愈速其死矣。尤当注意之。
+`炳章`按：`苏州``戈`制半夏，不但各地仿制作伪，且现洋托民信局去购，亦多赝品。因该地信局，与伪半夏店订有私约，与信局以重大回扣，而寄来仿单，亦属相同，惟半夏色黯不香，无玉桂气。`戈老二房`真者，其色黄亮，气香有玉桂气。欲购真者，必须托邮局汇洋挂号，寄`苏州``阊门`临赖路`戈老二房`半夏店，则不致误购伪品耳。且`戈`半夏方虽秘制，大约与《本草纲目拾遗》内「宋公夏」相类，有肉桂，性温燥。`炳章`实验治寒湿痰上壅气喘，确效。凡治阴虚热痰气喘，苟误服之，必因燥热而咳血自汗，愈速其死矣。尤当注意之。
 
 # 商陆
 伪名**次商陆**，即俗所称**猪卜卜**者，其性无从稽考，万不可服。按商陆气味辛平，有毒，主治水肿痈肿，杀鬼精物。近道所在有之，春生苗高二三尺，茎青赤，极柔脆，叶如牛舌而长；夏秋开花作朵，根如萝卜，似人形者有神。有赤、白二种，白根者花白，赤根者花赤。白者入药，赤者毒更甚，俗名**章柳**，不可服，服之见鬼神。嗟嗟，同是一种，根色赤者，尚不可用，猪卜卜之异种乎。
@@ -378,7 +378,7 @@
 # 杜仲
 伪名**洋杜仲**，又名土杜仲，皮红而厚，少丝。按杜仲之木，始出豫州山谷，得中土之精，皮色黑而味辛平，折之有白丝相连不断，兼禀阳明、少阴金水之精气，故《本经》主治腰膝痛，补中益精气，坚筋骨，强志，除阴下痒湿，小便馀沥。若此种洋杜仲，皮色既红，则性味自别，又安可用乎？
 
-`炳章`按：杜仲，乃树之膜皮也。其树之叶作倒矗之卵形，端尖，但能剥杜仲之树干，非高数丈，大可一二人抱者不可。考其年龄，在数十年者，割剖之时间，自五月至九月，过此则不易分剖矣。其皮在根间者，厚松而次；在中段者，皮厚细糯为佳；枝杈以上，皮虽细极薄，效力亦弱矣。产`四川``绥定`、`洛阳`者，体质坚重，外皮细结，内皮光黑，中层丝厚，扯之韧长如丝者，最佳。`巴河`产者亦佳。`贵州`及`鄂`之`施南`、`湘`之`宝庆`等处产者，皮粗质轻，皆次。`浙`之`温`、台与`闽`省，质松皮粗，内层丝皮其薄，皆不道地。
+`炳章`按：杜仲，乃树之膜皮也。其树之叶作倒矗之卵形，端尖，但能剥杜仲之树干，非高数丈，大可一二人抱者不可。考其年龄，在数十年者，割剖之时间，自五月至九月，过此则不易分剖矣。其皮在根间者，厚松而次；在中段者，皮厚细糯为佳；枝杈以上，皮虽细极薄，效力亦弱矣。产`四川``绥定`、`洛阳`者，体质坚重，外皮细结，内皮光黑，中层丝厚，扯之韧长如丝者，最佳。`巴河`产者亦佳。`贵州`及`鄂`之`施南`、`湘`之`宝庆`等处产者，皮粗质轻，皆次。`浙`之`温`、`台`与`闽`省，质松皮粗，内层丝皮其薄，皆不道地。
 
 # 黄柏
 （柏，古字作蘖，今省笔作柏）
@@ -393,7 +393,7 @@
 `炳章`按：枳壳、枳实，为老嫩、大小之分别。`江西``沙河`出者，细皮肉厚而结，色白气清香而佳，`龙虎山`出者亦佳。`四川`出者，名**川枳壳**。色黄肉厚，味带酸，次之。`江``浙``衢州`出者，皮粗色黄，卷口心大肉薄，亦次。`浙江``黄埠`出者，肉松而大，有灯盏之名，更次，洋枳壳者，或即此也。七八月採者，小而嫩、肉厚，干之黑褐色，为枳实；九十月採者，壳大、肉略薄、色白，为枳壳，每个对切为两，皆以翻肚如盆口唇状，须陈久者良。近时有一种臭橘，形亦相似，其气恶浊，不堪入药。
 
 # 化橘红、橘红
-按《岭南杂记》「`化州`仙橘」：相传仙人`罗办`种橘于石龙之腹，惟此一株，在`苏泽堂`为最，故`梁`氏家藏`苏泽堂``化州`橘皮，著有「橘红歌」，歌长不录。产清风楼者次之，红树者又次之。其实非橘，皮厚内酸，不可食；其皮厘为五片或七片，不可成双，每片真者可值一金。前朝每年所产，循例具文报明上台，届期督抚差亲随跟同採摘批制。官斯土者，亦不多得。彼土人云：凡近`化州`得闻谯楼更鼓者，其皮亦佳。故化皮赝者多，真者难得。关涵《岭南随笔》有云：`化州`署橘树，一月生一子，以其皮入药，痰立解，后为大风所折，即其地补种，气味更殊。今称`化州`橘红者，率以增城各处所出香柚皮伪代之，气味辛温而烈，气虚及有火者，万不可服，服之即有害。昔`丰顺丁`中丞抚`闽`时，赠`化州`橘皮一个，计五片，皮薄，色黯黄，微有毛孔，气香味甘。且语：先君云，此予官`化州`学时，署中槛前一株，每年只产数枚，朝夕调护，宝而藏之。且云近`化州`得闻署中更鼓者，尚可用，舍此皆赝物也。今肆中办有一种皮厚色绿者，皆柚皮伪充，医者处方，幸勿轻率频疏「绿毛化」及「化州皮」等名，徒服伪药，于病鲜济。不如只用陈久橘皮较为稳当，愿与同志商之。
+按《岭南杂记》「`化州`仙橘」：相传仙人`罗办`种橘于石龙之腹，惟此一株，在`苏泽堂`为最，故`梁`氏家藏`苏泽堂``化州`橘皮，著有「橘红歌」，歌长不录。产清风楼者次之，红树者又次之。其实非橘，皮厚内酸，不可食；其皮厘为五片或七片，不可成双，每片真者可值一金。前朝每年所产，循例具文报明上台，届期督抚差亲随跟同採摘批制。官斯土者，亦不多得。彼土人云：凡近`化州`得闻谯楼更鼓者，其皮亦佳。故化皮赝者多，真者难得。关涵《岭南随笔》有云：`化州`署橘树，一月生一子，以其皮入药，痰立解，后为大风所折，即其地补种，气味更殊。今称`化州`橘红者，率以`增城`各处所出香柚皮伪代之，气味辛温而烈，气虚及有火者，万不可服，服之即有害。昔`丰顺丁`中丞抚`闽`时，赠`化州`橘皮一个，计五片，皮薄，色黯黄，微有毛孔，气香味甘。且语：先君云，此予官`化州`学时，署中槛前一株，每年只产数枚，朝夕调护，宝而藏之。且云近`化州`得闻署中更鼓者，尚可用，舍此皆赝物也。今肆中办有一种皮厚色绿者，皆柚皮伪充，医者处方，幸勿轻率频疏「绿毛化」及「化州皮」等名，徒服伪药，于病鲜济。不如只用陈久橘皮较为稳当，愿与同志商之。
 
 `炳章`按：`梁绍壬`云：`化州`橘树，乃仙人`罗办`种于石龙腹上，共九株，各相去数武，以近龙井略偏一株为最。井在暑大堂左廊下，龙口相近者次之，城以外则臭味迥殊矣。`广西`孝廉江树玉著《橘红辨》谓：橘小皮薄，柚大皮厚；橘熟由青转黄，柚熟透绿转黄。间常坐卧树下，细验枝叶香味，明明柚也，而混呼之曰橘，且饰其皮曰红，实好奇之过云。或有云，近龙井下有礞石，礞石能化痰，橘树得礞石之气，故化痰力更胜。《识药辨微》云：化橘红近日`广`中来者，皆单片成束，作象眼块，或三十五十片，两头以红绳扎成一把。外皮绿黄色，内腹皮白色，周身有猪鬃皮，此种皆柚皮，亦能消痰，此近今名白毛红。又一种为世所重，每扎十片如爪，用`化州`印，名**五爪橘红**，亦柚皮所制，较掌片略佳，究之较真者远甚也。真`化州`橘红，煎之作甜香，取其汁一点入痰盂内，痰变为水，此为上品，如`梁`氏家藏`苏泽堂`橘红，每一个七破，反折作七歧，晒乾气甚香烈，此亦上品也。近今通行有黄色、绿色两种，均七歧对折，质薄有毛，黄色较绿色尤贵，虽非真品，皆属柚皮之类，然用于寒痰、湿痰病尚效。凡属阴火热痰，及肝火烁肺涎痰，皆忌。误用之反增剧，甚则咳血，不可不知也。
 
@@ -420,9 +420,9 @@
 # 沉水香
 真黑沉香，以`海南``黎峒`所出者为胜，最不易得，次则`真腊`，次则`交`、`广`、崖州等处。入药须取色纯黑、质不枯、硬重能沉于水者为上，半沉者次之。近有以老束香有紫油者伪充，性燥烈，质重不能沉水，误人匪浅。
 
-`炳章`按：《南方草木状》云：`交趾`有密香树，干如柜柳，其花白而繁，其叶如橘，欲取香，伐之。经年，其根、干、枝节，各有别色也。木心与节坚黑沉水者为沉香；与水面平者为**鸡骨香**；其根为**黄熟香**；其馀为**栈香**；细枝坚实未澜者为**青桂香**；其根节轻而大者为**马蹄香**，其花不香；成实乃香为**鸡舌香**。同出一树，皆珍异之物也。《香谱》云：沉水香出天竺、单于二国，与栈香、鸡骨同出一树，其叶似橘，经冬不调，夏生花白而圆细，秋结实如槟榔色紫，似椹而味辛，树皮青色，木如榉、柳，重实黑色沉水者，即沉香。今复有色黄而沉水者，谓之蜡沉丁。《香传》云：香之类有四：曰沉，曰笺，曰生结，曰黄熟。其为类也有二。沉香得其八焉：曰乌文格，曰黄蜡，曰牛眼，曰牛角，曰牛蹄，曰鸡头，曰鸡腿，曰鸡骨，皆为沉香也。鸡骨香以其枯燥清浮故名，青桂香即沉香黑斑者也。《倦游杂录》云：沉香木`岭`南诸郡悉有之，濒海州尤多，交干连枝，岗岭相接，数千里不绝。叶如冬青，大者合数人抱，木性虚柔，山民或以构茅屋，或以为桥梁，为饭甑尤善。有香者百无一二。盖木得水方结香，多在折枝枯乾中，或为沉，或为煎，或为黄熟。自枯死者，谓之水槃香。今`南恩`、`高窦`等州，惟产生结香。盖山民入山见香木之曲干斜枝，必以刀斫之成坎，经年得雨水所渍遂结香，复以锯取之，刮去白木，其香结为斑点，亦名**鹧鸪斑**，燔之甚佳。沉香之良者，惟在琼、崖等州，俗谓角沉，乃生木中取者，宜用熏裛，黄熟乃枯木中得之，宜入药用，其依木皮而结者，谓之青桂香，气尤清。在土中藏久，不待刓剔而精者，谓之龙鳞。亦有削之自卷、咀之柔韧者，谓之**黄蜡沉香**，尤难得，此即**伽楠香**也。
+`炳章`按：《南方草木状》云：`交趾`有密香树，干如柜柳，其花白而繁，其叶如橘，欲取香，伐之。经年，其根、干、枝节，各有别色也。木心与节坚黑沉水者为沉香；与水面平者为**鸡骨香**；其根为**黄熟香**；其馀为**栈香**；细枝坚实未澜者为**青桂香**；其根节轻而大者为**马蹄香**，其花不香；成实乃香为**鸡舌香**。同出一树，皆珍异之物也。《香谱》云：沉水香出`天竺`、`单于`二国，与栈香、鸡骨同出一树，其叶似橘，经冬不调，夏生花白而圆细，秋结实如槟榔色紫，似椹而味辛，树皮青色，木如榉、柳，重实黑色沉水者，即沉香。今复有色黄而沉水者，谓之蜡沉丁。《香传》云：香之类有四：曰沉，曰笺，曰生结，曰黄熟。其为类也有二。沉香得其八焉：曰乌文格，曰黄蜡，曰牛眼，曰牛角，曰牛蹄，曰鸡头，曰鸡腿，曰鸡骨，皆为沉香也。鸡骨香以其枯燥清浮故名，青桂香即沉香黑斑者也。《倦游杂录》云：沉香木`岭`南诸郡悉有之，濒海州尤多，交干连枝，岗岭相接，数千里不绝。叶如冬青，大者合数人抱，木性虚柔，山民或以构茅屋，或以为桥梁，为饭甑尤善。有香者百无一二。盖木得水方结香，多在折枝枯乾中，或为沉，或为煎，或为黄熟。自枯死者，谓之水槃香。今`南恩`、`高窦`等州，惟产生结香。盖山民入山见香木之曲干斜枝，必以刀斫之成坎，经年得雨水所渍遂结香，复以锯取之，刮去白木，其香结为斑点，亦名**鹧鸪斑**，燔之甚佳。沉香之良者，惟在`琼`、`崖`等州，俗谓角沉，乃生木中取者，宜用熏裛，黄熟乃枯木中得之，宜入药用，其依木皮而结者，谓之青桂香，气尤清。在土中藏久，不待刓剔而精者，谓之龙鳞。亦有削之自卷、咀之柔韧者，谓之**黄蜡沉香**，尤难得，此即**伽楠香**也。
 
-《铁围山丛谈》云：香木，初一种也，膏脉贯溢，则其结沉实，此为沉水香也。其类有四：谓之气结，自然其间凝实者也；谓之脱落，因木朽而自解者也；谓之生结，先以刀斧伤之，而后膏脉凝聚其间也；谓之蛊漏，因伤蠹而后膏脉亦聚也。四者以自然脱落为上而其气和，生结蛊漏则其气烈为下焉。其外则有半结半不结，为弄水沉，因其半结则实而色黑，半不结则不实而色褐，有谓之鹧鸪斑是也。复有名**水盘头**，其结实厚者，亦近乎沉水香。但香水被伐，其根盘必有膏脉涌溢，故亦结，但数为雨淫，其气颇腥烈，虽有香气，不大凝实，谓之笺香。三者其产占城国，不若`真腊国`，`真腊`不若`海南``黎峒`，又皆不若`万安`、`吉阳`两军之间`黎母山`，至是为冠绝天下之香，无能及之矣。`范成大`曰：沉水香上品出`海南``黎峒`，亦名**土沉香**，少大块；其次如茧粟角，如附子，如芝菌，如茅竹叶者，皆佳。至轻薄如纸者，入水亦沉。香之节，因久垫土中，滋液下向，结而为香，採时而香悉在下，其揹带木性者乃出土上。环岛四郡果皆有之，悉冠诸蕃所出，尤以出`万安`者为最胜。盖`万安山`在岛之正东，锺朝阳之气，香尤酝藉丰美。大抵`海南`香，气皆清淑，焚一博许，氛翳满室，四面悉香，至煤尽气亦不焦，此南海香之辨也。占城、`真腊`等香，近年又贵，丁流眉来者，予试之，乃不及`海南`中下品。舶香往往腥烈，意味又短，带木性，尾烟必焦。海北生`交趾`者，蕃舶皆聚`钦州`，谓之**钦香**，质重实，多大块，气尤酷烈，难可入药，南人贱之。蓬莱香者，亦出`海南`，即沉水香结未成者，多成片如小竺及大菌之状，有径一二尺者，极坚实，色状如沉香，惟入水则浮，刳其揹带木处，亦多沉。鹧鸪斑香，亦得之于`海南`，沉水蓬莱及绝好笺香中搓牙轻松，色褐黑而有白斑点点，如鹧鸪臆上毛，气又清婉如莲花。笺香出`海南`，香如蝟皮慄蓬及渔蓑状。盖修治时雕镂费工，去木留香，棘刺森然。香之精锺于刺端，芳气与他处笺香迥别。《黎岐纪闻》云：沉水香，俗人以为`海南`宝，牛角沉为最上，细花次之。粗花又次之。其有成片者，浑沌形类帽者，为帽头沉；虫蚀而有虫空者，为虫口沉，象形取义，各不同也。又有一种曰**飞香**，如牛筋飞、大练飞、苦瓜飞、麻雀飞等。其形各殊，命名亦异。然飞香内亦有牛角沉、细花、粗花之分，未可概论，大概各香以沉水不沉水分贵贱耳。然香之出也有神，黎中人往往于山内偶遇香，用草缚其树以作记，急取斧斤砍之，及再至其处，则草移别树，而原香亦不可复得耳。
+《铁围山丛谈》云：香木，初一种也，膏脉贯溢，则其结沉实，此为沉水香也。其类有四：谓之气结，自然其间凝实者也；谓之脱落，因木朽而自解者也；谓之生结，先以刀斧伤之，而后膏脉凝聚其间也；谓之蛊漏，因伤蠹而后膏脉亦聚也。四者以自然脱落为上而其气和，生结蛊漏则其气烈为下焉。其外则有半结半不结，为弄水沉，因其半结则实而色黑，半不结则不实而色褐，有谓之鹧鸪斑是也。复有名**水盘头**，其结实厚者，亦近乎沉水香。但香水被伐，其根盘必有膏脉涌溢，故亦结，但数为雨淫，其气颇腥烈，虽有香气，不大凝实，谓之笺香。三者其产占城国，不若`真腊国`，`真腊`不若`海南``黎峒`，又皆不若`万安`、`吉阳`两军之间`黎母山`，至是为冠绝天下之香，无能及之矣。`范成大`曰：沉水香上品出`海南``黎峒`，亦名**土沉香**，少大块；其次如茧粟角，如附子，如芝菌，如茅竹叶者，皆佳。至轻薄如纸者，入水亦沉。香之节，因久垫土中，滋液下向，结而为香，採时而香悉在下，其揹带木性者乃出土上。环岛四郡果皆有之，悉冠诸蕃所出，尤以出`万安`者为最胜。盖`万安山`在岛之正东，锺朝阳之气，香尤酝藉丰美。大抵`海南`香，气皆清淑，焚一博许，氛翳满室，四面悉香，至煤尽气亦不焦，此南海香之辨也。占城、`真腊`等香，近年又贵，丁流眉来者，予试之，乃不及`海南`中下品。舶香往往腥烈，意味又短，带木性，尾烟必焦。海北生`交趾`者，蕃舶皆聚`钦州`，谓之**钦香**，质重实，多大块，气尤酷烈，难可入药，南人贱之。蓬莱香者，亦出`海南`，即沉水香结未成者，多成片如小竺及大菌之状，有径一二尺者，极坚实，色状如沉香，惟入水则浮，刳其揹带木处，亦多沉。鹧鸪斑香，亦得之于`海南`，沉水蓬莱及绝好笺香中搓牙轻松，色褐黑而有白斑点点，如鹧鸪臆上毛，气又清婉如莲花。笺香出`海南`，香如蝟皮慄蓬及渔蓑状。盖修治时雕镂费工，去木留香，棘刺森然。香之精锺于刺端，芳气与他处笺香迥别。《黎岐纪闻》云：沉水香，俗人以为`海南`宝，牛角沉为最上，细花次之。粗花又次之。其有成片者，浑沌形类帽者，为帽头沉；虫蚀而有虫空者，为虫口沉，象形取义，各不同也。又有一种曰**飞香**，如牛筋飞、大练飞、苦瓜飞、麻雀飞等。其形各殊，命名亦异。然飞香内亦有牛角沉、细花、粗花之分，未可概论，大概各香以沉水不沉水分贵贱耳。然香之出也有神，`黎`中人往往于山内偶遇香，用草缚其树以作记，急取斧斤砍之，及再至其处，则草移别树，而原香亦不可复得耳。
 
 综观诸贤辨香之产地、结香之原因、香类之鉴别，已阐发无遗，毋庸`炳章`再辨矣。兹据前贤所名牛角沉，即今之墨沉，最上品是也。所谓**鹧鸪斑**、**蓬莱香**、**帽头沉**、**虫口沉**，即今之**将军帽**、**鱼片沉**之类是也。今之所谓**毛沉**者，实为前贤所谓香外削去之木也，为最次，不入药用，不可不知也。
 
@@ -432,7 +432,7 @@
 `炳章`按：`朱辅山`云：真降本出`南海`山中，今溪峒僻处所出者，似是而非，劲瘦不甚香。《真腊记》云：降香生丛林中，番人颇费砍斫之功，乃树心也，其外白皮厚八九寸，或五六寸，焚之气劲而远。《稽含草木状》云：紫藤，长茎，细叶，梗极坚实，重重有皮，花白子黑，其截置烟焰中，经久成紫香，可降神，故名**降香**。按`纪`氏所说，与前说稍异，岂即`朱`氏所谓似是而非者乎？抑`中国`出乎？与番降不同乎？`郑`君所云或南降乎？惟苏木混充，恐非事实。盖降香色紫黑坚致，气香，有辛辣气。苏木色黄微红，质脆松，气微香，如柏树气，形色气味，皆有不同，且降香出货亦多，价值低廉，恐不易混充耳。
 
 # 乳香
-乳香，一名**薰陆香**，苦温辛香，善窜入心，活血舒筋，生肌止痛，能通行十二经。西出天竺，南出`波斯`等国。圆大如乳头，明透者良，为疡科要药。今市肆多以枫脂、松脂混充，误人不少。
+乳香，一名**薰陆香**，苦温辛香，善窜入心，活血舒筋，生肌止痛，能通行十二经。西出`天竺`，南出`波斯`等国。圆大如乳头，明透者良，为疡科要药。今市肆多以枫脂、松脂混充，误人不少。
 
 `炳章`按：乳香出暹罗等处，为薰陆树之脂，以透明黄亮、形如乳头者为滴乳香，最佳。去油，以水煎烊，去底脚皮滓，投入冷水内，乳香则凝结成颗粒如黄豆，沉于水底，油得如脂，则浮于水面去之，以此制法，为最道地。炒之则油仍不净，且增火气。又一种名包乳，色黄如粉屑，砂石搀和甚多，价虽较廉，然货次，不堪药用耳。
 
@@ -464,21 +464,21 @@
 # 阿魏
 阿魏，辛平，入脾胃，消肉积，杀细虫，去臭气。出西番，木脂熬成。气味极臭。试取少许，安铜器一宿，沾处白如银汞者真。今人多以胡蒜白伪造之，用者不可不慎。
 
-`炳章`按：《新疆杂记》云：阿魏，伞形科之多年生草本也，高三四尺，茎径寸许，叶淡红色。五六月间，花丛生于顶，如茴香，气非常之臭，偶一沾之，数日不能去。其液名阿魏精，人取之贩卖，每斤价钱八钱。根茎如萝卜，径三四寸，长尺余，人取之以熬膏，每斤价钱三四钱，此即真阿魏也。《五杂俎》云：黄金无假，阿魏无真。皆状其得之之难，而不知`新疆``塔城``伊犁镇`西，以及`迪化`之`孚远`、`奇台`等处，遍野漫山，直有用之不竭之势，牵羊、毒羊之说，尤为谬妄矣，且产于`伊犁`者，其味特香，尤为奇品。《觚賸》云：诺皋载`波斯国`出阿虞，长八九尺，皮色青黄，三月生，叶似鼠耳，断其枝汁如饴，久而坚凝，名阿魏。本草亦从之。近有客自`滇`中来，言彼处蜂形甚巨，结窝多在绝壁，垂如雨盖。`滇`人于其下掘一坎，置肥羊于内，令善射者飞骑发矢，落其窝，急以物覆坎，则蜂与羊相刺扑，二者合併，取出杵用，是名阿魏。所闻特异，此说谬妄，不能取信，附录以待考正。据诸家本草亦多从植物类而生，并无此议。考近今市用色黄溏者，曰**溏魏**，佳；黑者，名**砂魏**，次。按阿魏有三试法：以半钱阿魏安于铜器中一宿，有魏沾处如银者，真；以一钱入五豆草自然汁中一宿，至明日如鲜血者，亦佳；一钱安柚树上，立乾者，亦佳。
+`炳章`按：《新疆杂记》云：阿魏，伞形科之多年生草本也，高三四尺，茎径寸许，叶淡红色。五六月间，花丛生于顶，如茴香，气非常之臭，偶一沾之，数日不能去。其液名**阿魏精**，人取之贩卖，每斤价钱八钱。根茎如萝卜，径三四寸，长尺余，人取之以熬膏，每斤价钱三四钱，此即真阿魏也。《五杂俎》云：黄金无假，阿魏无真。皆状其得之之难，而不知`新疆``塔城``伊犁镇`西，以及`迪化`之`孚远`、`奇台`等处，遍野漫山，直有用之不竭之势，牵羊、毒羊之说，尤为谬妄矣，且产于`伊犁`者，其味特香，尤为奇品。《觚賸》云：诺皋载`波斯国`出阿虞，长八九尺，皮色青黄，三月生，叶似鼠耳，断其枝汁如饴，久而坚凝，名阿魏。本草亦从之。近有客自`滇`中来，言彼处蜂形甚巨，结窝多在绝壁，垂如雨盖。`滇`人于其下掘一坎，置肥羊于内，令善射者飞骑发矢，落其窝，急以物覆坎，则蜂与羊相刺扑，二者合併，取出杵用，是名阿魏。所闻特异，此说谬妄，不能取信，附录以待考正。据诸家本草亦多从植物类而生，并无此议。考近今市用色黄溏者，曰**溏魏**，佳；黑者，名**砂魏**，次。按阿魏有三试法：以半钱阿魏安于铜器中一宿，有魏沾处如银者，真；以一钱入五豆草自然汁中一宿，至明日如鲜血者，亦佳；一钱安柚树上，立乾者，亦佳。
 
 # 天竹黄
 天竹黄，生`南海`镛竹中，此竹极大，又名天竹。故`宗奭`云：是竹内所生，如黄土，著竹成片者，今剖诸竹内，往往得之。按`李时珍`有言：竹黄乃大竹之精气结成，其气味功用与竹沥同，而无寒滑之害。气味甘寒，凉心经，去风热，清痰火。真者难得，故肆中有伪品，或云即土石所造，色杂不可辨，用者不可不慎也。
 
-`炳章`按：`李时珍`《本草纲目》「释名」条下，採注吴僧赞宁《笋谱》云：天竺生`南海`镛竹中，又名**天竹**，此竹极大，其内生黄，可以疗疾。本草作天竺之竺，非矣。`李息斋`《竹谱详录》云：镛竹出`广南`，绝大，内空，节可容二升，`交`、`广`人持以此量出纳。竹中有水，甚清洁。溪涧四月后，水皆有毒，惟此竹水无毒，土人陆行皆饮用之；至深冬则凝结竹内如玉，即天竹黄也。可疗风痫疾。又如相迷竹，生`黄州`，状与镛竹大同小异，中亦有黄，堪作丸治病，然力不及镛竹云。`沈存中`《笔谈》补云：`岭`南深山中有大竹（即镛竹），内有水，甚清澈，溪涧中水皆有毒，惟此水无毒，土人陆行多饮之。至深冬则凝结如玉，即天竹黄也。昔`王彦祖`知`雷州`时，盛夏至`官山`，溪涧水皆不可饮，惟剖竹取水，烹饪饮啜，皆用竹水。次年被召赴`关东`行，求竹水不可复得，问土人乃知至冬则凝结，不复成水。适是夜野火烧林，木为煅烬，惟竹黄不灰，如火烧兽骨，色灰而轻。土人多以火后採集，以供药品，不若生得者为善，因生时与竹节贴牢，不易取凿耳。`沈`、`李`二公所说竹黄，确是近今天生之老式竹黄。
+`炳章`按：`李时珍`《本草纲目》「释名」条下，採注吴僧赞宁《笋谱》云：天竺生`南海`镛竹中，又名**天竹**，此竹极大，其内生黄，可以疗疾。本草作`天竺`之竺，非矣。`李息斋`《竹谱详录》云：镛竹出`广南`，绝大，内空，节可容二升，`交`、`广`人持以此量出纳。竹中有水，甚清洁。溪涧四月后，水皆有毒，惟此竹水无毒，土人陆行皆饮用之；至深冬则凝结竹内如玉，即天竹黄也。可疗风痫疾。又如相迷竹，生`黄州`，状与镛竹大同小异，中亦有黄，堪作丸治病，然力不及镛竹云。`沈存中`《笔谈》补云：`岭`南深山中有大竹（即镛竹），内有水，甚清澈，溪涧中水皆有毒，惟此水无毒，土人陆行多饮之。至深冬则凝结如玉，即天竹黄也。昔`王彦祖`知`雷州`时，盛夏至`官山`，溪涧水皆不可饮，惟剖竹取水，烹饪饮啜，皆用竹水。次年被召赴`关东`行，求竹水不可复得，问土人乃知至冬则凝结，不复成水。适是夜野火烧林，木为煅烬，惟竹黄不灰，如火烧兽骨，色灰而轻。土人多以火后採集，以供药品，不若生得者为善，因生时与竹节贴牢，不易取凿耳。`沈`、`李`二公所说竹黄，确是近今天生之老式竹黄。
 
 又考`日本`《竹谱》云：竹实酥、竹膏，皆`汉`之天竹黄也。因竹枯，筒中之露水由湿热凝结如面粉者，名**天竹黄**。`田中方男`云：此物系生于竹节间凝结物，大抵由纯粹玻石而成。于东`印度`、`中国`，以供药剂之用，价甚贵。用于胆液性之呕吐痰痫、血痢、痔疾及其他相类之证。《林氏本草》云：竹条中之黄，乃竹所含有之乳汁液，干而凝结者，性与新竹之甘味液相同。至于老竹则色液俱变，结为坚块，恰如一种浮石，有异味，而收敛异常，俨如已烧之象牙，`印度`名之曰**竹糖**，`汉`医名曰**竹黄**。《植物字汇》云：若竹干过于坚密，则其节中以得太阳之温度，而次第凝结之故，自然滴液如蜜，即古来所传竹实酥也。法《大字书》云：竹节间，有名`他伯希尹尔`者，为玻石质，而杂以灰石质少许及有机性之物质，是昔所最珍奇者也。由是观之，则老竹节间所潴留之甘液，次第凝结为砂石状者也，其性为玻石质。玻石质者，木贼、麦稗等之坚质所具之质也。本邦九州，竹中有液者甚多，特`萨州`竹中，出有砂石状之物，迄七八月割之则出水，十月、十一月则成砂块，灰黄色。
 
-综观东西洋诸学说，其名虽有竹实酥、竹膏等之异，辨其生成形态，与`沈`、`李`之发明，亦相吻合，然亦足资参考，以补我中华旧有本草之所未详，比较现行老式片天竹黄一一符合。余如《大明》云：此是`南海`边竹内尘砂结成者。`宗奭`曰：此竹内所生如黄土、著竹成片者。`马志`曰：天竹黄生`天竺国`，今诸竹内往往得之，多烧诸骨灰及蛤粉等杂之者云云，大抵如近人云人造者。依据此说也，近时作伪者，不独以蛤粉等制造，甚至有用水门汀伪造者，可谓天良伤尽者也。然伪造形态易于鉴别，与天然生成者，形色不同耳。
+综观东西洋诸学说，其名虽有竹实酥、竹膏等之异，辨其生成形态，与`沈`、`李`之发明，亦相吻合，然亦足资参考，以补我`中华`旧有本草之所未详，比较现行老式片天竹黄一一符合。余如《大明》云：此是`南海`边竹内尘砂结成者。`宗奭`曰：此竹内所生如黄土、著竹成片者。`马志`曰：天竹黄生`天竺国`，今诸竹内往往得之，多烧诸骨灰及蛤粉等杂之者云云，大抵如近人云人造者。依据此说也，近时作伪者，不独以蛤粉等制造，甚至有用水门汀伪造者，可谓天良伤尽者也。然伪造形态易于鉴别，与天然生成者，形色不同耳。
 
 # 朱砂、丹砂
-丹砂，始出涪州山谷，今`辰州`、`锦州`及`云南`、`波斯`蛮獠洞中、石穴内皆有，而以`辰州`为胜，故又名辰砂。大者如芙蓉花，小者如箭镞，研之明净鲜红，斯为上品。近今市肆有以铅丹搀入朱砂，又用代赭搀入辰砂，贻害多矣。
+丹砂，始出`涪州`山谷，今`辰州`、`锦州`及`云南`、`波斯`蛮獠洞中、石穴内皆有，而以`辰州`为胜，故又名**辰砂**。大者如芙蓉花，小者如箭镞，研之明净鲜红，斯为上品。近今市肆有以铅丹搀入朱砂，又用代赭搀入辰砂，贻害多矣。
 
-`炳章`按：朱砂体质极重，鲜红、朱红色至褐红色之粒块，亦有成细小透明之斜方之结晶体者，或为红色粉末。有时含有机物，则颜色殆黑不明亮，俗为阴沙，实内含有锑质，或铁质、铜及各种硫化物矿相伴，不堪入药。`周去非`云：据《本草》金石部，以`湖南``辰州`所产为佳，虽今世亦贵之，今辰砂乃出沅州，其色与`广西``宜州`所产相类，色鲜红微紫，与`邕州`砂之深紫微黑者大异，功效亦相悬绝。盖宜山即辰山之阳故也。虽然宜、辰朱砂虽良，要非仙药。尝闻`邕州`石江溪峒、`归德州`大秀墟有金缠砂，大如箭镞，而上有金线缕文，乃真仙药，得其道者，可用以变化形质，试取以炼水银，乃见其异。乃`邕州`烧水银，当朱砂十二三斤，可烧成十斤，其良者十斤真得十斤，惟金缠砂八斤可得十斤。不知此砂一经人力，形质乃重，何哉？是砂也，取毫末而齿之，色如鲜血，诚非辰、宜可及。惜乎出产不丰，不能分销全国耳。今所通行者，皆`湖南``辰州`及`云南`、`贵州`出者，苟能片大而薄，如镜面光亮，色紫红鲜艳明透者，为镜面砂，亦佳。如整粒者，为豆砂，能起镜面光艳，亦佳。细如粉屑者，为米砂，略次。如呆色紫暗不明亮者，即阴砂，内含锑质或铁质，为更次，不宜入药用。
+`炳章`按：朱砂体质极重，鲜红、朱红色至褐红色之粒块，亦有成细小透明之斜方之结晶体者，或为红色粉末。有时含有机物，则颜色殆黑不明亮，俗为阴沙，实内含有锑质，或铁质、铜及各种硫化物矿相伴，不堪入药。`周去非`云：据《本草》金石部，以`湖南``辰州`所产为佳，虽今世亦贵之，今辰砂乃出`沅州`，其色与`广西``宜州`所产相类，色鲜红微紫，与`邕州`砂之深紫微黑者大异，功效亦相悬绝。盖`宜山`即`辰山`之阳故也。虽然宜、辰朱砂虽良，要非仙药。尝闻`邕州``石江`溪峒、`归德州``大秀墟`有金缠砂，大如箭镞，而上有金线缕文，乃真仙药，得其道者，可用以变化形质，试取以炼水银，乃见其异。乃`邕州`烧水银，当朱砂十二三斤，可烧成十斤，其良者十斤真得十斤，惟金缠砂八斤可得十斤。不知此砂一经人力，形质乃重，何哉？是砂也，取毫末而齿之，色如鲜血，诚非辰、宜可及。惜乎出产不丰，不能分销全国耳。今所通行者，皆`湖南``辰州`及`云南`、`贵州`出者，苟能片大而薄，如镜面光亮，色紫红鲜艳明透者，为镜面砂，亦佳。如整粒者，为豆砂，能起镜面光艳，亦佳。细如粉屑者，为米砂，略次。如呆色紫暗不明亮者，即阴砂，内含锑质或铁质，为更次，不宜入药用。
 
 # 硇砂
 `时珍`曰：硇砂，性毒，服之使人硇乱，故名。恭曰：硇砂出`西戎`，形似牙消，光净者良。苏颂曰：`西戎`来者，颗块光明，大者有如拳，重三四两，小者如指而入药。近有一种如秋石，味咸；又一种如猪肝色，有星点，不知是何石所混充，皆为赝品，不用为善。
@@ -506,9 +506,9 @@
 `炳章`按：按《鲍叔真医方约说》云：蟾酥乃治诸毒之要药也，制合得宜，傅、服皆可用。蛤蚆皮即蟾皮也，大能收毒外贴，不可缺也。《嘉兴县志》云：宫中用蟾酥锭，于每年端午日修合。各坊车虾蟆至医院者亿万计，往时取用后率毙，盖两目俱废，不能跳跃也。东山朱公典院事，命止刺其一偏，得苏者甚多。此事似微，然发念甚真，为德不浅。`王文谟`《碎金方》取蟾酥法：先将牙皂角三两，煎水三沸，旋候冷，用大口瓮或缸盛水，将癞虾蟆不拘多少入中，以稀物覆之，勿令跳出。过一宿，其酥即浮水面。若未浮，其酥即在身上矣。可用竹刀刮下用之。《本草明辨》云：端午日以大蛤壳未离带者，合于虾蟆眉上肿处，用力一捻，刚酥出壳内，贮于油纸候乾。`江`南出者为**杜酥**，要无面块、神色起亮光者佳。`无锡`出者，中有竹节痕；`浙江``杭`、`绍`出者，为片子酥，粉质少者亦佳；`山东`出者为**东酥**，色黄黑味麻辣，不上二层之货。盖酥本无定色，但验其粉之轻重为衡。如看成色，以水一碗将酥化开，放入水，如乌见水即变色，水面有泡沫者真。伪真见水不动，而粉质渐露矣。
 
 # 蕲蛇
-真蕲州所产之蛇，龙头虎口，黑质白花，肋有二十四个方胜文，腹有念珠斑，口有四长牙，尾有一佛指甲，长一二分，胸形如连珠。市肆有用本地白花蛇伪充，欲辨真伪，但视蛇虽乾枯，而眼光不陷者为真。故罗愿《尔雅翼》有云：蛇死目皆闭，惟蕲蛇目开如生耳。
+真`蕲州`所产之蛇，龙头虎口，黑质白花，肋有二十四个方胜文，腹有念珠斑，口有四长牙，尾有一佛指甲，长一二分，胸形如连珠。市肆有用本地白花蛇伪充，欲辨真伪，但视蛇虽乾枯，而眼光不陷者为真。故`罗愿`《尔雅翼》有云：蛇死目皆闭，惟蕲蛇目开如生耳。
 
-`炳章`按：《虞初广志》云：蚺蛇大者达十馀丈，围可八九尺，为蛇中之最大者，故又名王蛇，属动物学蛇类中之阔口类。其部分之构造，头部以下，躯干及尾，无显然之判别。皮肤中含有色素，成特有之体色，外皮半脱数之，谓之蛇脱。此系蛇类之特别机关。因蛇类外皮无生长之力，故苟躯干增大，势必脱去之也。心脏具二心耳，一心室，故生理学上之消化作用欠缺，而血行迟缓，其所以成冷血动物者此也。此蛇腹部之下，尚存有后足遗蹟，由动物学之历史考之，可知其脱变之迹。现多产热带诸地，`岭`南亦著，皆夙以为贡品。如《唐书·地理》所谓：`广州`土贡鳖甲、蚺蛇是也。常栖树上，虽无毒齿，而筋肉强大，能咬杀人畜。候獐鹿过者，吸而吞之，至已溶化，即缠束大树，出其头角乃不复动。土人每伺而杀之。其所以能吞较己大之动物者，即以此蛇无胸骨，而体中筋肉可任意张缩也。《金楼子》有《楚辞》云「蛇有吞象其大如何」之句，或谓指巴蛇，或云即指此也。《埤雅》云：蚺蛇尾圆无鳞，身有斑纹，故如暗锦缬，似鼍行地，常俯其首。胆随日转，上自近头，中自近心，下自近尾。蚺蛇肉，俗谓食之辟蛊毒。其牙长六七寸，土人云：利远行，避不祥。每枚值牛数头，其说亦见于《括地志》。然最贵者为胆，能疗疾。`唐`时敕令`桂`、`贺`、`泉`、`广`四州轮次以进。`段公路`亦云：`广州``南海县`，每年端午日，尝取其胆贡进。蛇则诸郡採送事参亲看出之。郑重如此。实则由身中具一种特别之液体，利去风湿诸疾。其皮性坚韧，或鞔鼓。今`潮州`亦有为之者，其声绝类象皮鼓。盖蚺蛇全体殆无一非有用之材也，故《叔夜养生论》云：蚺蛇珍于`越`土。而《南裔异物志》亦云：蚺惟大蛇，既洪且长，彩色驳荦，其文锦章，食豕吞鹿，腴成养创，宾亨嘉食，是豆是觞，皆驳之也。《特晋中兴书》所云：颜含嫂，病困，须蚺蛇胆不能得，含忧叹累日。忽一童持青囊授含，乃蛇胆也。其他如《簪云楼杂记》云：`沈`公某，其乡人也，明`万历`间巡抚`滇南`，初至，文武来谒，有参将貌甚丑陋，厥首仅存白骨，绝无额、准、辅、颐，惟目光烁烁腾注。公大惊，独留问故，自言兹地蚺蛇，千岁以上者高数丈，亘四五里，恒宵游，遇豺虎诸兽则吸而吞之，其于人亦然。某曾夜归，觉为风摄去，蹶趋如坐丹炉中，万火齐发，腥秽且逼人。某疑入蚺蛇腹矣。亟抽刀割之，约厚五六寸，任此蛇撼天抢地，奔跃数十里外，经时才出，而此蚺蛇己死。某通体殷红，颊上皮肉俱尽，倦而寐，及寤始疼，阅半载方愈。此约长五里，山中人竞取脂燃灯，鳞火如笠云。据前辨蚺蛇，乃产两`广`深山热带地者，故其形甚大。我`浙江``金`、`衢`、`严`等所产亦多，惟大者绝少。是蛇一日中惟午时闭眼。其捕法，以长竹竿端绳圈，打于丛草上，如下有蚺蛇，则草经打摇动，而蛇遂直立欲扑状，即以绳圈套于蛇身抽紧，则蛇将绳缠紧，遂持竹竿于石上，将竹竿压于蛇上，以利刃剖蛇腹去肠脏，以竹枪撑而晒乾，惟胆亦取出收藏，以作药用。`郑`君有言：以白花蛇伪充，白花蛇甚小，重不及两。干蚺蛇大者十馀两，小者五六两，断不能可充。且白花蛇价昂蚺蛇十倍，惟初生小蚺蛇充白花蛇，或亦合理，惟斑纹亦有不同耳。
+`炳章`按：《虞初广志》云：蚺蛇大者达十馀丈，围可八九尺，为蛇中之最大者，故又名**王蛇**，属动物学蛇类中之阔口类。其部分之构造，头部以下，躯干及尾，无显然之判别。皮肤中含有色素，成特有之体色，外皮半脱数之，谓之蛇脱。此系蛇类之特别机关。因蛇类外皮无生长之力，故苟躯干增大，势必脱去之也。心脏具二心耳，一心室，故生理学上之消化作用欠缺，而血行迟缓，其所以成冷血动物者此也。此蛇腹部之下，尚存有后足遗蹟，由动物学之历史考之，可知其脱变之迹。现多产热带诸地，`岭`南亦著，皆夙以为贡品。如《唐书·地理》所谓：`广州`土贡鳖甲、蚺蛇是也。常栖树上，虽无毒齿，而筋肉强大，能咬杀人畜。候獐鹿过者，吸而吞之，至已溶化，即缠束大树，出其头角乃不复动。土人每伺而杀之。其所以能吞较己大之动物者，即以此蛇无胸骨，而体中筋肉可任意张缩也。《金楼子》有《楚辞》云「蛇有吞象其大如何」之句，或谓指巴蛇，或云即指此也。《埤雅》云：蚺蛇尾圆无鳞，身有斑纹，故如暗锦缬，似鼍行地，常俯其首。胆随日转，上自近头，中自近心，下自近尾。蚺蛇肉，俗谓食之辟蛊毒。其牙长六七寸，土人云：利远行，避不祥。每枚值牛数头，其说亦见于《括地志》。然最贵者为胆，能疗疾。`唐`时敕令`桂`、`贺`、`泉`、`广`四州轮次以进。`段公路`亦云：`广州``南海县`，每年端午日，尝取其胆贡进。蛇则诸郡採送事参亲看出之。郑重如此。实则由身中具一种特别之液体，利去风湿诸疾。其皮性坚韧，或鞔鼓。今`潮州`亦有为之者，其声绝类象皮鼓。盖蚺蛇全体殆无一非有用之材也，故《叔夜养生论》云：蚺蛇珍于`越`土。而《南裔异物志》亦云：蚺惟大蛇，既洪且长，彩色驳荦，其文锦章，食豕吞鹿，腴成养创，宾亨嘉食，是豆是觞，皆驳之也。《特晋中兴书》所云：`颜含`嫂，病困，须蚺蛇胆不能得，`含`忧叹累日。忽一童持青囊授`含`，乃蛇胆也。其他如《簪云楼杂记》云：`沈`公某，其乡人也，明`万历`间巡抚`滇南`，初至，文武来谒，有参将貌甚丑陋，厥首仅存白骨，绝无额、准、辅、颐，惟目光烁烁腾注。公大惊，独留问故，自言兹地蚺蛇，千岁以上者高数丈，亘四五里，恒宵游，遇豺虎诸兽则吸而吞之，其于人亦然。某曾夜归，觉为风摄去，蹶趋如坐丹炉中，万火齐发，腥秽且逼人。某疑入蚺蛇腹矣。亟抽刀割之，约厚五六寸，任此蛇撼天抢地，奔跃数十里外，经时才出，而此蚺蛇己死。某通体殷红，颊上皮肉俱尽，倦而寐，及寤始疼，阅半载方愈。此约长五里，山中人竞取脂燃灯，鳞火如笠云。据前辨蚺蛇，乃产两`广`深山热带地者，故其形甚大。我`浙江``金`、`衢`、`严`等所产亦多，惟大者绝少。是蛇一日中惟午时闭眼。其捕法，以长竹竿端绳圈，打于丛草上，如下有蚺蛇，则草经打摇动，而蛇遂直立欲扑状，即以绳圈套于蛇身抽紧，则蛇将绳缠紧，遂持竹竿于石上，将竹竿压于蛇上，以利刃剖蛇腹去肠脏，以竹枪撑而晒乾，惟胆亦取出收藏，以作药用。`郑`君有言：以白花蛇伪充，白花蛇甚小，重不及两。干蚺蛇大者十馀两，小者五六两，断不能可充。且白花蛇价昂蚺蛇十倍，惟初生小蚺蛇充白花蛇，或亦合理，惟斑纹亦有不同耳。
 
 # 红点蛤蚧、蛤蚧
 蛤蚧生于`岭`南山谷及城墙或大树间，形如大守宫，身长四五寸，尾与身等。自惜其尾，见人取之，多自啮断其尾而去。药力在尾，尾不全者不效。《北户录》云：其首如蟾蜍，背绿色，上有黄斑点，如古锦纹，其声最大。`苏颂`云：入药肆须雌雄两用最灵。或云阳人用雌，阴人用雄。`雷斆`曰：雄为蛤，身小尾粗；雌为蚧，皮细口尖，身大尾小。气味咸平，有小毒。治虚劳嗽喘，助阳益精，大有奇功。`李珣`曰：凡用须炙，令黄色，熟捣。口含少许，奔走不喘息者为真也。今市肆有一种红点蛤蚧者，有大毒，万不可服。用者须拣尾全者，细验皮色有无红点，方可入药。
@@ -518,7 +518,7 @@
 # 苏蜈蚣、蜈蚣
 蜈蚣，以`苏州`产者为良。闻`苏`人採取生草堆积腐烂，日久便生，爆干外货。背光脊绿，足赤腹黄，此易辨物也。舍蜈蚣均不可用。市肆有以本地所产混售，闻有一种千足虫，一名**马陆**，形最相似。若误用之，并把著腥臭气入顶，皆能毒发致死，不可不慎。
 
-`炳章`按：蜈蚣，`江苏``苏州``洞庭山`出者多，头红身黑有光，大者最佳；`常州``吴江县``锅山`出者少，头红身黄色略次。`四川`出者，头黄褐色，身黑褐色，小多力薄亦次。`浙江``馀姚县`出者，头亦红，身黑褐色略次。大抵用者须择长大头尾全、全身黑而有光者为道地。项元鳞曰：近时有一种千足虫，其形相似，惟头上有白肉，嘴尖者，最毒，不宜作蜈蚣用。
+`炳章`按：蜈蚣，`江苏``苏州``洞庭山`出者多，头红身黑有光，大者最佳；`常州``吴江县``锅山`出者少，头红身黄色略次。`四川`出者，头黄褐色，身黑褐色，小多力薄亦次。`浙江``馀姚县`出者，头亦红，身黑褐色略次。大抵用者须择长大头尾全、全身黑而有光者为道地。`项元鳞`曰：近时有一种千足虫，其形相似，惟头上有白肉，嘴尖者，最毒，不宜作蜈蚣用。
 
 # 绦纬
 用洋红染轻麻伪充。以指蘸水，略搓便见。按绦纬乃红花所染。红花苦温，入肝经血分，丝为蚕之精气，可以熄内风，制为纬又取其通络，故古方肝著汤用之辄验。若以洋红染造，则失之远矣，况洋红有毒乎。尤可恨者，近日医家疏方，已经旁注洋红染不可用，而贪利之徒，偏以此欺骗病家，是太无天良者矣。
@@ -528,7 +528,7 @@
 # 䗪虫
 䗪虫，《本经》名**地鳖**，《别录》名**土鳖**，形扁如鳖，有甲不能飞，小有臭气。此物好生鼠壤及屋壁地棚之下。气味咸寒，有毒，专破症瘕。考`仲景`《金匮》鳖甲煎丸，用之治病疟日久，结为症瘕；大黄䗪虫丸，用之治虚劳腹满，内有乾血；下瘀血汤，用之治产后腹痛，内有瘀血；土瓜根散，用之治经水不利，少腹满痛，以其消症而破瘀也。去冬因用蔗虫，以催痘浆，调查各药铺，方知所制鳖甲煎丸、大黄䗪虫丸，皆用蔗虫。以讹传讹，皆由吾国药剂师互相传授。未读方书，不明本草，以致贻误匪少。堪发一叹！不观夫古人制字，䗪字其下从虫，蔗字其上从草，或作樜，旁从木，足证明**蔗虫**由草本而化生，非如䗪虫之从湿土而出也。又按蔗虫，气味甘微寒，为发痘行浆、托痈清毒之妙品，且能化痰醒酒，和中利小便。产`广东``潮州`及`福建``漳`、`泉`蔗田中。形如蚕蛹，食蔗根而化生。土名**蔗蛄**，其味甘美，土人有用之以佐酒席。考《本草拾遗》及《南京医学报》，均有发明。可见䗪虫与蔗虫，性味不同，形质亦异。古人定方用药，各有主义，胡得妄行配制，以失效用。伏望热心同道与药商知好者，将此通告，苦劝改良，幸勿再蹈故辙，是所跂祷。
 
-`炳章`按：王士雄云：`潮州`蔗田接壤，食蔗之虫，形如蚕蛹而小，味极甘美，性凉，解热毒，助痘浆，可与兰虫并传。施可斋《闽杂记》云：漳、泉各处，二三月间，市上卖生熟甘蔗虫，甘蔗老根中生也。生者如蚕而细，灰白色，光润无茸毛；熟者以油灼过，拳曲如蜂，淡黄色，味极鲜，佐酒尤佳。考甘蔗性寒，故王维《谢赐樱桃诗》：饱食不须愁内热，大官还有蔗浆寒。此虫既生蔗中，宜亦性寒矣，而吾乡医者，治小儿痘浆不起多用之。或有云性热，《本草》不载，不能辨也。又据《两般秋雨庵随笔》载姚承宪《咏甘蔗虫诗》：蕴隆连日赋虫虫，渴念寒浆解热中，佳境不须愁有蛊，庶生原可庆斯螽。似谁折节吟腰细，笑彼含花蜜口空，毕竟冰心难共语，一樽愁绝对蛮风。玩诗次句，似亦谓其性寒，惟云「蕴隆连日」，则是夏月方有。诗在`粤`中所作，岂`粤`中夏月始卖，而漳、泉独早在二三月耶。而`郑`君出产时期亦未辨明，惟气味甘微寒，发痘行浆等效用，确与王、施二君发明吻合。`郑`君所言，可见皆从实验，吾于斯益信。惟䗪虫确是地鳖虫，即`仲景`大黄䗪虫丸等用之；以化症瘕去瘀血，端不能以甘蔗虫代之。吾谓以后业药者，暇时亦阅览《本草》，参对方书，庶不致再误人命矣。
+`炳章`按：王士雄云：`潮州`蔗田接壤，食蔗之虫，形如蚕蛹而小，味极甘美，性凉，解热毒，助痘浆，可与兰虫并传。施可斋《闽杂记》云：漳、泉各处，二三月间，市上卖生熟甘蔗虫，甘蔗老根中生也。生者如蚕而细，灰白色，光润无茸毛；熟者以油灼过，拳曲如蜂，淡黄色，味极鲜，佐酒尤佳。考甘蔗性寒，故王维《谢赐樱桃诗》：饱食不须愁内热，大官还有蔗浆寒。此虫既生蔗中，宜亦性寒矣，而吾乡医者，治小儿痘浆不起多用之。或有云性热，《本草》不载，不能辨也。又据《两般秋雨庵随笔》载姚承宪《咏甘蔗虫诗》：蕴隆连日赋虫虫，渴念寒浆解热中，佳境不须愁有蛊，庶生原可庆斯螽。似谁折节吟腰细，笑彼含花蜜口空，毕竟冰心难共语，一樽愁绝对蛮风。玩诗次句，似亦谓其性寒，惟云「蕴隆连日」，则是夏月方有。诗在`粤`中所作，岂`粤`中夏月始卖，而`漳`、`泉`独早在二三月耶。而`郑`君出产时期亦未辨明，惟气味甘微寒，发痘行浆等效用，确与`王`、`施`二君发明吻合。`郑`君所言，可见皆从实验，吾于斯益信。惟䗪虫确是地鳖虫，即`仲景`大黄䗪虫丸等用之；以化症瘕去瘀血，端不能以甘蔗虫代之。吾谓以后业药者，暇时亦阅览《本草》，参对方书，庶不致再误人命矣。
 
 # 犀角
 用黑兕角及水牛角，雕琢形似，假造混售。鑢便之粉，或锯便之屑，更难辨别。按`李时珍`云：犀出西番、南番、`滇南`、`交趾`诸处，有山犀、水犀二种。水犀出入水中，尤难得。`弘景`云：入药惟取雄犀，生者为佳，若犀片及见成器，物已被蒸煮，不堪用。`宗奭`云：鹿取茸，犀取尖，其精锐之力，尽在是也。用者当拣选角质乌黑，肌皱折裂光润者，错屑入臼，杵细研末，或当面鑢粉，或取顶尖磨水取汁，尤佳。再`李珣`有云：凡犀角锯成，当以薄纸裹于怀中，蒸燥乘热捣之，应手如粉。此法今人鲜知，故罕用耳。
@@ -540,7 +540,7 @@
 
 用白兕角及白牛蹄，琢磨伪充。其现切之羚角丝，尤难辨识。按羚羊产`梁州`、`真州`各处，`商``洛`诸蛮山中及`秦``陇``西域`皆有。角长尺余，有节特起，环绕如人手指握痕，得二十四节者，尤有神力。今多用尖，取其精锐坚刚之力也，宜拣选地道顶尖，磨水取之，用之尤灵。
 
-`炳章`按：羚羊不独真伪须辨，而镑法亦须改良。吾绍药业有见于斯。`民国`十四年二月间，嘱余撰《浸镑改燥镑理由书》，已刊登第十五期《绍兴医药月刊》，兹再摘录于下：考麢羊（俗作羚羊），属脊椎动物哺乳类，有胎盘类，反刍偶蹄类，羚羊科。形似小鹿，性至灵，故字从鹿从灵。藏器云：羚羊有神，夜宿防患，以角挂树不著地。但角弯中深锐紧小有挂痕者为真，疏慢无痕者非也。按羚羊形虽似鹿，又类山羊，口吻尖锐，面部三角形，耳轮大，眼有光，头上皆有长圆无枝之短角，从眉间伸出，间有曲轮，或略捲曲，或向后钩曲。角基中空，角心如笋。一次脱落（自落者为死角）不再生。毛柔滑而密，色概灰黑或褐黑色，背部与前膊间灰褐色，四肢细长、概黑褐色，尾短蹄小。身瘦狭，体长约四尺。栖于深山，常群栖。性温顺，有深虑。善疾走及跳跃，嗅觉敏锐，具灵异之性。终身爱护其角，故其精神亦凝聚于角。以角入药，能清热熄风，舒筋解毒，明目透疹，驱邪辟蛊，子痫痉厥，犹为要药。产于亚、美、欧、`台湾`、安南者，类别有十馀种之多。产`中国`者，如`陕西`、`哈密`外`福化城`、`新疆``奇台县`为最佳，`巩昌`、`汉中`者次。亦有黑白二种：黑者清肾肝热，白者清肺热熄风。近年以白者为重，故市上仅有白羚羊。黑者多无觅。讵知近年药用渐繁，捕猎殆尽，因而价值日昂。且羚羊质性坚硬，刀切不入，我业习俗以形式相竞，镑片入药，以求雅观。查其镑片之法：先将羚羊水浸七八日，再用滚水泡透，经此手续，化坚为软，则镑之片张阔大，形式虽雅观，然经水浸泡，汁液尽出，性味已失，反增腥臭恶气，治病功能已大半消失。尝考古人修治羚羊之法：先用铁锉锉细，再捣筛极细，更研万匝，入药免刮黏胃肠，使原质不失，效力完固，法良意美。同人等审度近日人心不齐，一经研末真伪难辨，难免以伪乱真，则害人更甚。我同人等本良心之主张，为改革弊害起见，邀集同业行店在会馆集议，述明羚角浸镑弊害原理，经众讨论，佥谓不落水燥镑。庶几性味不失，真伪仍可鉴别，为全体所公认。惟燥镑片张虽碎小，主治效能，实较浸镑优胜十倍云。（下略）
+`炳章`按：羚羊不独真伪须辨，而镑法亦须改良。吾绍药业有见于斯。`民国`十四年二月间，嘱余撰《浸镑改燥镑理由书》，已刊登第十五期《绍兴医药月刊》，兹再摘录于下：考麢羊（俗作羚羊），属脊椎动物哺乳类，有胎盘类，反刍偶蹄类，羚羊科。形似小鹿，性至灵，故字从鹿从灵。藏器云：羚羊有神，夜宿防患，以角挂树不著地。但角弯中深锐紧小有挂痕者为真，疏慢无痕者非也。按羚羊形虽似鹿，又类山羊，口吻尖锐，面部三角形，耳轮大，眼有光，头上皆有长圆无枝之短角，从眉间伸出，间有曲轮，或略捲曲，或向后钩曲。角基中空，角心如笋。一次脱落（自落者为死角）不再生。毛柔滑而密，色概灰黑或褐黑色，背部与前膊间灰褐色，四肢细长、概黑褐色，尾短蹄小。身瘦狭，体长约四尺。栖于深山，常群栖。性温顺，有深虑。善疾走及跳跃，嗅觉敏锐，具灵异之性。终身爱护其角，故其精神亦凝聚于角。以角入药，能清热熄风，舒筋解毒，明目透疹，驱邪辟蛊，子痫痉厥，犹为要药。产于`亚`、`美`、`欧`、`台湾`、`安南`者，类别有十馀种之多。产`中国`者，如`陕西`、`哈密`外`福化城`、`新疆``奇台县`为最佳，`巩昌`、`汉中`者次。亦有黑白二种：黑者清肾肝热，白者清肺热熄风。近年以白者为重，故市上仅有白羚羊。黑者多无觅。讵知近年药用渐繁，捕猎殆尽，因而价值日昂。且羚羊质性坚硬，刀切不入，我业习俗以形式相竞，镑片入药，以求雅观。查其镑片之法：先将羚羊水浸七八日，再用滚水泡透，经此手续，化坚为软，则镑之片张阔大，形式虽雅观，然经水浸泡，汁液尽出，性味已失，反增腥臭恶气，治病功能已大半消失。尝考古人修治羚羊之法：先用铁锉锉细，再捣筛极细，更研万匝，入药免刮黏胃肠，使原质不失，效力完固，法良意美。同人等审度近日人心不齐，一经研末真伪难辨，难免以伪乱真，则害人更甚。我同人等本良心之主张，为改革弊害起见，邀集同业行店在会馆集议，述明羚角浸镑弊害原理，经众讨论，佥谓不落水燥镑。庶几性味不失，真伪仍可鉴别，为全体所公认。惟燥镑片张虽碎小，主治效能，实较浸镑优胜十倍云。（下略）
 
 # 麝香
 麝形似獐而小，色黑，常食柏叶及蛇虫。其香在脐，故名**麝脐香**，又名当门子，生阴茎前，皮内别有膜袋裹之。至冬香满，入春脐内急痛，自以爪剔出，覆藏土内。此香最佳，但不易得。今惟得活者看取，必当全真。出`羌`夷者最好，出`隋郡``义阳``晋溪`诸蛮中者亚之，出`益州`者形扁多伪。凡真香，一子分作三四子，刮取血膜，杂以余物，裹以四足膝皮而货之。今货者又多伪，闻土人多以香猫肾伪充。考`刘侑`《西域记》，有云黑`契丹`出香猫，粪溺皆香如麝气，故有取其粪，用杂兽血腰伪造为麝香。近又以荔核煅为灰，装入真麝香皮袋中混售，贻害不浅。凡入药须辨真者用之。
@@ -560,12 +560,12 @@
 # 鹿茸
 鹿茸顶尖带血者，谓之血柿茸，价值甚昂。闻射利之徒，或用猪尾，或用小肠，和以猪血，搀以杂药，假造伪充。外形与真无二，及煎熬之后，则糜烂臭秽，可验而知之。若研末入丸药，甚难辨识。按鹿茸气味甘温无毒，主治漏下恶血，寒热惊痫，益气强志，生齿不老，为补骨血、益精髓之要药。麋茸尚不可用，又安用此假柿茸耶？若遇危险重症，服之则贻误必多矣！
 
-`炳章`按：茸者，如草芽初生之状。麋鹿，雌者无角，雄者之角，年解年生。乘其初生含血未成骨时，取以为补精血药。因其状命名也。惟採茸之法，贵乎始生含血者，渐长则成角不适用。故云宜如茄之小者，分歧则大而不取。此举茸生初久，形分大小而言，非可指为鹿之大小解也。凡具气血者，幼则弱，老则衰，惟壮大者则强。是麋鹿之茸，正当取于壮大之麋鹿为贵，当取其头骨大而茸丰肥，如马鞍形、鞒形者为最，至茄茸则太嫩而小，寇宗奭已论之矣。再论採取之法，《羌海杂志》云：茸鹿一种，天下盛称`关东`，其实制法，以西产为良，品质亦不及西产之厚也。然西产制法，亦未尝不佳。最上者亦曰**旋茸**。其法得一生鹿，闭于栅，聚围之而呼噪，鹿性躁惊，距奋掷足无停蹄，其体纯阳，两角更甚，约数小时，其热度达于极点，有力者粹入，以利刃断其首，长杆丈馀上穿铁环缀八尺之铁链，而以鹿角系其端，极力摇而旋转之。甲疲乙易，乙疲丙易，不知其数千万转，其精血灵活和匀，无孔不入，无窍不通。稍停，则精血凝聚之处，易生微虫；精血不到之处，元气不足，非全材矣，此`青海`採制鹿茸之法也。此指家畜而言。如遇野山之鹿，即随时又获取茸，攻效尤伟。`李春芝`云：麋鹿俗呼梅鹿，尤有马鹿之分，二鹿均能生茸，皆有腊血片。大抵麋鹿解角后，其新茸芽生之际，初起如银杏状，渐成梨形及核桃形，名曰血包，此为第一期。再则支生两凸，如茄子形，或如鞍子形，名曰扈子。鞍子稍养数日，急宜取用，此为第二期。倘逾此期，即为又子，此为第三期，即毛角也，血液枯燥，功效已薄。上述麋鹿生茸，关于时际之迟早，以区别其形状之良窳，再别其每架鹿茸切片时，复有蜡片、血片、风片、骨片之分。如茸之顶尖，最首层之白如蜡，油润如脂，名**之曰蜡片**；次层白中兼黄，纯系血液贯注其中，故名曰**血片**；最次层片有蜂巢，色紫黑透孔，名曰**风片**，俗云木通片，如木通之空通也；最次则与骨毗连，同角相仿，名曰**骨片**，效力更薄矣。凡辨原架鹿茸之法，须颜色紫红明润有神，顶圆如馒头式者佳，如色带黄黑顶上凹陷者次。东三省产及`青海`、`新疆`均佳。`浙江``衢州``金华`出亦佳。伪者以鹿茸架，用猪血面粉做成。
+`炳章`按：茸者，如草芽初生之状。麋鹿，雌者无角，雄者之角，年解年生。乘其初生含血未成骨时，取以为补精血药。因其状命名也。惟採茸之法，贵乎始生含血者，渐长则成角不适用。故云宜如茄之小者，分歧则大而不取。此举茸生初久，形分大小而言，非可指为鹿之大小解也。凡具气血者，幼则弱，老则衰，惟壮大者则强。是麋鹿之茸，正当取于壮大之麋鹿为贵，当取其头骨大而茸丰肥，如马鞍形、鞒形者为最，至茄茸则太嫩而小，`寇宗奭`已论之矣。再论採取之法，《羌海杂志》云：茸鹿一种，天下盛称`关东`，其实制法，以西产为良，品质亦不及西产之厚也。然西产制法，亦未尝不佳。最上者亦曰**旋茸**。其法得一生鹿，闭于栅，聚围之而呼噪，鹿性躁惊，距奋掷足无停蹄，其体纯阳，两角更甚，约数小时，其热度达于极点，有力者粹入，以利刃断其首，长杆丈馀上穿铁环缀八尺之铁链，而以鹿角系其端，极力摇而旋转之。甲疲乙易，乙疲丙易，不知其数千万转，其精血灵活和匀，无孔不入，无窍不通。稍停，则精血凝聚之处，易生微虫；精血不到之处，元气不足，非全材矣，此`青海`採制鹿茸之法也。此指家畜而言。如遇野山之鹿，即随时又获取茸，攻效尤伟。`李春芝`云：麋鹿俗呼梅鹿，尤有马鹿之分，二鹿均能生茸，皆有腊血片。大抵麋鹿解角后，其新茸芽生之际，初起如银杏状，渐成梨形及核桃形，名曰血包，此为第一期。再则支生两凸，如茄子形，或如鞍子形，名曰扈子。鞍子稍养数日，急宜取用，此为第二期。倘逾此期，即为又子，此为第三期，即毛角也，血液枯燥，功效已薄。上述麋鹿生茸，关于时际之迟早，以区别其形状之良窳，再别其每架鹿茸切片时，复有蜡片、血片、风片、骨片之分。如茸之顶尖，最首层之白如蜡，油润如脂，名**之曰蜡片**；次层白中兼黄，纯系血液贯注其中，故名曰**血片**；最次层片有蜂巢，色紫黑透孔，名曰**风片**，俗云木通片，如木通之空通也；最次则与骨毗连，同角相仿，名曰**骨片**，效力更薄矣。凡辨原架鹿茸之法，须颜色紫红明润有神，顶圆如馒头式者佳，如色带黄黑顶上凹陷者次。东三省产及`青海`、`新疆`均佳。`浙江``衢州``金华`出亦佳。伪者以鹿茸架，用猪血面粉做成。
 
 # 鹿角胶
 鹿角胶原名白胶，以鹿角寸截米泔浸七日，令软，再入急流中浸七日，刮去粗皮，以东流水、桑柴火煮七日，频频添水，取汁沥净，加无灰酒熬成膏，冷则胶成矣。气味甘平，主治伤中劳绝，腰痛羸瘦，补中益气，妇人血闭无子，止痛安胎。市肆有以牛皮煮为胶伪充，一层白色，俗名**白头**，气味膻臭黏浊，服之有害。
 
-`炳章`按：鹿之种类有三：`陆佃`云：鹿之大者名麈，群鹿似其尾为趋向，其尾可作拂尘，今北人呼为大尾鹿者是也。`李濒湖`以麋似鹿而色青黑，大如小牛，肉蹄，其目下有二窍为夜眼之说，证之似略有据，然未曾实指。其角解于冬也。`清高宗帝`有《鹿角记》，言之详矣。因二物俱解角于夏，`乾隆`丁亥长至，斋宿南郊，命侍臣诣南苑，聚木兰之鹿、`吉林`之麋、大尾之麈，监视之。及五时而麈之角解，麋、鹿皆不解。随传旨钦天监，改月令之麋角解为麈角解。此经颁示天下，而人民所共知者也。是麈之尾与麋鹿殊，而角解于长至。《地学杂志》云：麈，俗称为四不像。盖其形似鹿，而牛身、马尾、羊蹄，特其首类鹿耳，故得此名称。`清`圣祖尝在灵囿中实验此物，而改夏小正鹿角解之讹，若麋与鹿，即`李濒湖`所言麋肉蹄、四眼之说，亦犹黄牛之于水牛，形稍殊而其实一物也。且`朱子`之注《孟子》，亦曰麋，鹿之大者，未尝分为二也。`李春芝`云：麋鹿，俗名梅花鹿，尤有马鹿之分，亦属同类异种耳。《新疆杂记》云：麋鹿，北疆概产之，每冬季多狩猎者，其角于小满节后，角根发痒，以头相触，角即脱落，堆于一处，猎者于深山中有一获数百对者。脱角后越五六日，新茸即生，此时最为贵重。产于`拜城`之`额什克巴什山`、`汉腾格里山`、`若焉耆`之`纳刺达岭`，俗称之曰鹿圈，言其产鹿之多也。即品质言，尤以产于`伊犁`之果子汉者为最佳，行销于内地各药行。大抵`关东`出者，其角外皮黄黑色，内白色有神光为最佳，`湖`、`广`、`桱县`出亦佳。`福建`、`陕西`出有双角、单角之分，双角老者亦佳，单角次之。海`南丹`山出者，无杈枝亦次。又外洋淡水中出鱼角，又名沙角，为鲨鱼所变，其色枯白而大，杈枝甚多，为最次。其他煎胶之法：用正鹿角锯断，每段约二寸另，通净角内灰质，洗净，煎七昼夜，停火，取出骨渣，候冷滤净，再熬至滴水成珠，取起入方锡盘中，候凝结成块。取出以刀切块，贮藏三年发售，名鹿角胶是也。
+`炳章`按：鹿之种类有三：`陆佃`云：鹿之大者名麈，群鹿似其尾为趋向，其尾可作拂尘，今北人呼为大尾鹿者是也。`李濒湖`以麋似鹿而色青黑，大如小牛，肉蹄，其目下有二窍为夜眼之说，证之似略有据，然未曾实指。其角解于冬也。`清高宗帝`有《鹿角记》，言之详矣。因二物俱解角于夏，`乾隆`丁亥长至，斋宿南郊，命侍臣诣南苑，聚木兰之鹿、`吉林`之麋、大尾之麈，监视之。及五时而麈之角解，麋、鹿皆不解。随传旨钦天监，改月令之麋角解为麈角解。此经颁示天下，而人民所共知者也。是麈之尾与麋鹿殊，而角解于长至。《地学杂志》云：麈，俗称为四不像。盖其形似鹿，而牛身、马尾、羊蹄，特其首类鹿耳，故得此名称。`清`圣祖尝在灵囿中实验此物，而改夏小正鹿角解之讹，若麋与鹿，即`李濒湖`所言麋肉蹄、四眼之说，亦犹黄牛之于水牛，形稍殊而其实一物也。且`朱子`之注《孟子》，亦曰麋，鹿之大者，未尝分为二也。`李春芝`云：麋鹿，俗名梅花鹿，尤有马鹿之分，亦属同类异种耳。《新疆杂记》云：麋鹿，北`疆`概产之，每冬季多狩猎者，其角于小满节后，角根发痒，以头相触，角即脱落，堆于一处，猎者于深山中有一获数百对者。脱角后越五六日，新茸即生，此时最为贵重。产于`拜城`之`额什克巴什山`、`汉腾格里山`、`若焉耆`之`纳刺达岭`，俗称之曰鹿圈，言其产鹿之多也。即品质言，尤以产于`伊犁`之果子汉者为最佳，行销于内地各药行。大抵`关东`出者，其角外皮黄黑色，内白色有神光为最佳，`湖`、`广`、`桱县`出亦佳。`福建`、`陕西`出有双角、单角之分，双角老者亦佳，单角次之。海`南丹`山出者，无杈枝亦次。又外洋淡水中出鱼角，又名沙角，为鲨鱼所变，其色枯白而大，杈枝甚多，为最次。其他煎胶之法：用正鹿角锯断，每段约二寸另，通净角内灰质，洗净，煎七昼夜，停火，取出骨渣，候冷滤净，再熬至滴水成珠，取起入方锡盘中，候凝结成块。取出以刀切块，贮藏三年发售，名鹿角胶是也。
 
 # 龟鹿二仙胶、龟板、鹿角
 龟鹿二仙胶，用[龟版]、[鹿角]、[枸杞]、[人参]四味，煎熬为胶。乃峻补气血，不寒不燥，又能益髓固精，为补方中妙品。闻有以牛皮胶及他药伪造混售，服之无益有害，良可慨耳！
